mettre en place la lettre

--- a/src/templates/_entreprise.pug
+++ b/src/templates/_entreprise.pug
@@ -47,29 +47,29 @@ mjml
         block hero
             include ../includes/_hero
         //- block Edito
-        block edito
+            block edito
             include ../includes/entreprise/_edito
         //-block Lancement Mastère    
-        block mastere
+            block mastere
             include ../includes/entreprise/_mastere
         //-block Etude
             block etude Igensia
             include ../includes/entreprise/_etudeIgensia
         //-block job dating alternance
-        block job Dating
+            block job Dating
             include ../includes/entreprise/_jobDating
         //- block Trading Game
-        block tradingGame
+            block tradingGame
             include ../includes/entreprise/_tradingGame
         //- block cvbook
-        block cvbook
+            block cvbook
             include ../includes/entreprise/_cvbook
         //- block salon de l'Etudiant
-        block salon Etudiant
+            block salon Etudiant
             include ../includes/entreprise/_salonEtudiant
         //- block agenda
         block agenda 
-            include ../includes/entreprise/_agenda
+            include ../includes/_agenda
         //-block partenaires
         block partenaires
             include ../includes/_partenaires
