correction des textes

--- a/src/templates/_entreprise.pug
+++ b/src/templates/_entreprise.pug
@@ -1,6 +1,6 @@
 mjml
     mj-head
-        mj-title Lettre Ecosup Assurance - Entreprise Janvier 2025
+        mj-title Lettre Ecosup Assurance - Entreprise Février 2025
         mj-raw.
             <meta name="color-scheme" content="light"/>
             <meta name="supported-color-schemes" content="light"/>
