--- a/src/includes/_hero.pug
+++ b/src/includes/_hero.pug
@@ -16,4 +16,4 @@ mj-section(background-color='#eff1f5' padding='0')
 //- Numéro Newsletter
 mj-section(background-color='#eff1f5' padding='0')
     mj-column(width='95%')
-        mj-text(padding='5px 10px' align='left' font-size='16px' font-weight='300' color='#2D3748') #[span(style='font-weight:700;text-transform:uppercase') News Ecosup Assurance]&nbsp;&nbsp;|&nbsp;&nbsp;Janvier 2025
+        mj-text(padding='5px 10px' align='left' font-size='16px' font-weight='300' color='#2D3748') #[span(style='font-weight:700;text-transform:uppercase') News Ecosup Assurance]&nbsp;&nbsp;|&nbsp;&nbsp;Février 2025
