--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -1,7 +1,7 @@
 
 <mjml>
   <mj-head>
-    <mj-title>Lettre Ecosup Assurance - Entreprise Janvier 2025</mj-title>
+    <mj-title>Lettre Ecosup Assurance - Entreprise Février 2025</mj-title>
     <mj-raw>
       <meta name="color-scheme" content="light"/>
       <meta name="supported-color-schemes" content="light"/>
@@ -81,7 +81,7 @@
     </mj-section>
     <mj-section background-color="#eff1f5" padding="0">
       <mj-column width="95%">
-        <mj-text padding="5px 10px" align="left" font-size="16px" font-weight="300" color="#2D3748"><span style="font-weight:700;text-transform:uppercase">News Ecosup Assurance</span>&nbsp;&nbsp;|&nbsp;&nbsp;Janvier 2025</mj-text>
+        <mj-text padding="5px 10px" align="left" font-size="16px" font-weight="300" color="#2D3748"><span style="font-weight:700;text-transform:uppercase">News Ecosup Assurance</span>&nbsp;&nbsp;|&nbsp;&nbsp;Février 2025</mj-text>
       </mj-column>
     </mj-section>
     <mj-section background-color="#EDF2F7" padding-top="20px" padding-bottom="10px">
