--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -84,6 +84,79 @@
         <mj-text padding="5px 10px" align="left" font-size="16px" font-weight="300" color="#2D3748"><span style="font-weight:700;text-transform:uppercase">News Ecosup Assurance</span>&nbsp;&nbsp;|&nbsp;&nbsp;Février 2025</mj-text>
       </mj-column>
     </mj-section>
+    <mj-section background-color="#ffffff" padding="0px">
+      <mj-column width="100%">
+        <mj-image padding="0" border="none" fluid-on-mobile="true" width="600px" src="https://i.ibb.co/ZRsJv5c5/news-Bandeau012025.jpg" alt="Christian Annaloro, responsable pédagogique d'Ecosup Assurance, la remise des diplômes dans la salle des cérémonies de la ville de Tourcoing"/>
+      </mj-column>
+    </mj-section>
+    <mj-section background-color="#ffffff" padding-top="10px" padding-bottom="40px">
+      <mj-column width="88%"> 
+        <mj-text padding-top="5px" padding-bottom="0" mj-class="T+2 cA+2" text-transform="uppercase">Édito</mj-text>
+        <mj-text padding-top="5px" padding-bottom="5px" mj-class="T+0 cT-0" font-style="italic"><span style="font-weight:700;color:#2D3748;">Quelle nouvelle année&nbsp;!</span></mj-text>
+        <mj-text padding-top="5px" padding-bottom="5px" mj-class="T+0 cT-0" font-style="italic">Pleine de projets et d'ambitions, 2025 s'annonce riche en promesses. </mj-text>
+        <mj-text padding-top="5px" padding-bottom="5px" mj-class="T+0 cT-0" font-style="italic">Et ça démarre maintenant&nbsp;! Je suis particulièrement heureux de vous annoncer le <span style="font-weight:700;color:#2D3748;">lancement de notre nouveau Mastère en Ingénierie Patrimoniale</span> (bac + 5). Ce diplôme, fruit de plusieurs mois de travail, ouvre de nouvelles perspectives à nos étudiants et nous positionne comme un acteur majeur de la formation supérieure dans notre région.</mj-text>
+        <mj-text padding-top="5px" padding-bottom="5px" mj-class="T+0 cT-0" font-style="italic">Mais ce n'est pas tout&nbsp;! Notre <span style="font-weight:700;color:#2D3748;">traditionnelle cérémonie de remise des diplômes</span> a été, une fois de plus, un moment fort en émotions. Voir nos étudiants rayonner de fierté après toutes ces années d'efforts est une immense récompense pour toute l'équipe et un bonheur immense pour leurs familles venues nombreuses malgré les conditions climatiques&nbsp;! </mj-text>
+        <mj-text padding-top="5px" padding-bottom="5px" mj-class="T+0 cT-0" font-style="italic">Je tiens à remercier chaleureusement la ville de Tourcoing, en particulier Madame le Maire Doriane Becue pour votre soutien indéfectible et pour nous avoir accueillis dans les magnifiques salons de la mairie.</mj-text>
+        <mj-text padding-top="5px" padding-bottom="5px" mj-class="T+0 cT-0" font-style="italic">Ensemble, construisons l'avenir de nos étudiants&nbsp;!</mj-text>
+      </mj-column>
+    </mj-section>
+    <mj-section background-color="#EDF2F7" padding="20px 17px">
+      <mj-column width="40%" padding="8px">
+        <mj-image padding="0px" border="none" width="480px" src="https://i.ibb.co/9KRgW2m/Ass03012025.jpg" alt="Version desktop, logo de l'ESA(École Supérieure d'Assurance) avec un groupe d'étudiants et leur enseignant"/>
+      </mj-column>
+      <mj-column width="60%" padding="8px">
+        <mj-spacer height="12px"></mj-spacer>
+        <mj-text padding="0px" align="left" mj-class="T+2 cA+2" text-transform="uppercase">Objectif Bac+5</mj-text>
+        <mj-text padding="0px" align="left" mj-class="T+1 cA+1">Lancement du Mastère Expert(e) en Ingénierie Patrimoniale&nbsp;!</mj-text>
+        <mj-text padding="5px 0" mj-class="T+0 cT-0"><span style="font-weight:700;color:#2D3748;">Ecosup Assurance</span> franchit une nouvelle étape en lançant son <span style="font-weight:700;color:#2D3748;">Mastère Expert en Ingénierie Patrimoniale</span> (bac+5). Ce diplôme, <span style="font-weight:700;color:#2D3748;">développé en partenariat</span> avec l'École Supérieure d'Assurance de Paris, répond aux enjeux actuels du marché de la gestion de patrimoine.</mj-text>
+        <mj-text padding="5px 0" mj-class="T+0 cT-0">En choisissant notre mastère, les étudiants intégreront un <span style="font-weight:700;color:#2D3748;">cursus d'excellence</span> et bénéficieront d'un accompagnement personnalisé tout au long de leur formation.</mj-text>
+        <mj-text padding="5px 0" mj-class="T+0 cT-0"><span style="font-weight:700;color:#2D3748">L'avenir s'écrit à Ecosup Assurance&nbsp;!</span></mj-text>
+        <mj-spacer height="10px"></mj-spacer>
+        <mj-text padding="5px 25px" align="right" color="#BA4995" font-size="16px" font-weight="700" line-height="20px"><a href="https://ecosup-assurance.fr/mastere-expert-en-ingenierie-patrimoniale/" style="color:#BA4995;font-size:16px;line-weight:20px;font-weight:700" target="_blank">En savoir plus sur le Mastère...</a></mj-text>
+      </mj-column>
+    </mj-section>
+    <mj-section background-color="#ffffff" padding="20px 17px">
+      <mj-column width="40%" padding="8px">
+        <mj-image padding="0" border="none" src="https://i.ibb.co/CKkS7Mcf/Ass06012025.jpg" alt="Affiche du Job Dating Assurance et Banque qui aura lieu le 17 avril 2025" width="480px"/>
+      </mj-column>
+      <mj-column width="60%" padding="8px">
+        <mj-spacer height="12px"></mj-spacer>
+        <mj-text padding="0" align="left" mj-class="T+2 cA+2" text-transform="uppercase">Job Dating Alternance</mj-text>
+        <mj-text padding="0" align="left" mj-class="T+1 cA+1">Une chance à saisir le 17&nbsp;avril&nbsp;2025&nbsp;! </mj-text>
+        <mj-text padding="5px 0" mj-class="T+0 cT-0"><span style="font-weight:700;color:#2d3748">Ecosup Assurance</span> organise un événement unique dans la région&nbsp;: <span style="font-weight:700;color:#2D3748;">un Job Dating spécial Banque Assurance&nbsp;!</span></mj-text>
+        <mj-text padding="5px 0" mj-class="T+0 cT-0">Les participants rencontreront de 14h à 17h30 les grands <span style="font-weight:700;color:#2d3748;">acteurs de l'assurance et de la banque</span> pour décrocher leur alternance. </mj-text>
+        <mj-image padding="5px 0px" border="none" fluid-on-mobile="true" src="https://i.ibb.co/7x40j9Qy/Ass-JD01012025.jpg" alt="logo des entreprises qui particpent au job dating du 17 avril 2025"/>
+        <mj-text padding="5px 0" mj-class="T+0 cT-0">Chaque candidat Bénéficiera de conseils personnalisés de nos partenaires, dont <span style="font-weight:700;color:#2D3748;">Grafton Recruitement</span>, spécialiste RH du secteur financier et pourra rencontrer l'<span style="font-weight:700;color:#2D3748;">OPCO Atlas</span> : acteur indispensable de l'alternance.</mj-text>
+        <mj-image padding="5px 0px" border="none" fluid-on-mobile="true" src="https://i.ibb.co/XkVT3MgX/Ass-JD02012025.jpg" alt="logo des partenaires Grafton recruitement et Atlas opco"/>
+        <mj-text padding="5px 0" mj-class="T+0 cT-0">Avec le soutien de la <span style="font-weight:700;color:#2D3748;">MEL et du Département du Nord</span>, cet événement est une opportunité en or pour lancer sa carrière&nbsp;!</mj-text>
+      </mj-column>
+    </mj-section>
+    <mj-section background-color="#EDF2F7" padding="20px 17px">
+      <mj-column width="40%" padding="8px">
+        <mj-image padding="0px" border="none" src="https://i.ibb.co/4xjMZFG/Ass02012025.jpg" alt="logo du Trading Game d'Ecosup Campus" width="480px"></mj-image>
+      </mj-column>
+      <mj-column width="60%" padding="8px">
+        <mj-spacer height="12px"></mj-spacer>
+        <mj-text padding="0" align="left" mj-class="T+2 cA+2" text-transform="uppercase">Trading Game</mj-text>
+        <mj-text padding="0" align="left" mj-class="T+1 cA+1">Une âme de gestionnaire de fonds, les marchés boursiers fascinent...</mj-text>
+        <mj-text padding="5px 0" mj-class="cT-0 T+0">Alors bienvenue à notre <span style="font-weight:700;color:#2d3748;">concours de trading simulé</span>, une opportunité unique pour nos futurs étudiants de mettre à l'épreuve leurs <span style="font-weight:700;color:#2D3748;">compétences en investissement&nbsp;!</span></mj-text>
+        <mj-text padding="5px 0" mj-class="cT-0 T+0">L'inscription à nos Journées Portes Ouvertes permet de participer à ce concours du 25&nbsp;/&nbsp;01&nbsp;/&nbsp;2025 au 25&nbsp;/&nbsp;02&nbsp;/&nbsp;2025. De nombreux lots à gagner&nbsp;! </mj-text>
+        <mj-text padding="5px 0" mj-class="cT-0 T+0"><span style="font-weight:700;color:#2D3748;">Le but du concours est simple&nbsp;</span> Chaque candidat dispose d'un <span style="font-weight:700;color:#2D3748;">capital fictif de 100&nbsp;000&nbsp;euros</span> et le but est de créer un portefeuille d'actions fictif et réaliser le meilleur rendement sur une période d'un mois.</mj-text>
+        <mj-text padding="5px 0" mj-class="cT-0 T+0">Les participants utiliseront une <span style="font-weight:700;color:#2D3748;">plateforme de trading virtuelle ABC Bourse</span> pour acheter et vendre des actions réelles en temps réel mais virtuellement.</mj-text>
+      </mj-column>
+    </mj-section>
+    <mj-section background-color="#ffffff" padding="20px 17px">
+      <mj-column width="40%" padding="8px">
+        <mj-image padding="0" border="none" width="480px" src="https://i.ibb.co/5hb83Xgm/cv-Book042025-1.jpg" alt="Couverture du nouveau CV Book avec de nouveaux étudiants"/>
+      </mj-column>
+      <mj-column width="60%" padding="8px">
+        <mj-spacer height="12px"></mj-spacer>
+        <mj-text padding="0px" align="left" font-size="14px" font-weight="900" color="#944694" line-height="18px" text-transform="uppercase" letter-spacing="1px">Apprentissage</mj-text>
+        <mj-text padding="0px" align="left" font-size="20px" font-weight="700" line-height="24px" color="#684092">Votre entreprise recherche un collaborateur ! </mj-text>
+        <mj-text padding="5px 0px" align="left" mj-class="T+0 cT-0">Demandez votre accès privilégié à l'espace entreprise pour découvrir <span style="color:#2D3748;font-weight:700;">notre CV Book</span>, reprenant tous les <span style="color:#2D3748;font-weight:700;">futurs talents</span> d'Ecosup Assurance Banque en <span style="color:#2D3748;font-weight:700;">recherche d'un contrat d'alternance</span>. </mj-text>
+        <mj-text padding="5px 0px" align="left" mj-class="T+0 cT-0">Nous pouvons également vous l'adresser au format PDF sur simple demande.</mj-text>
+      </mj-column>
+    </mj-section>
     <mj-section background-color="#EDF2F7" padding-top="20px" padding-bottom="10px">
       <mj-column>
         <mj-text padding="0 25px" align="left" font-size="14px" font-weight="900" color="#944694" line-height="18px" text-transform="uppercase" letter-spacing="1px">À vos Agendas</mj-text>
