réglage de la maquette en attendante des textes et des photos

--- a/src/includes/entreprise/_mastere.pug
+++ b/src/includes/entreprise/_mastere.pug
@@ -1,6 +1,6 @@
 mj-section(background-color='#EDF2F7' padding="20px 17px")
     mj-column(width="40%" padding="8px")
-        mj-image(
+        //-mj-image(
             padding="0px"
             border="none"
             width="480px"
@@ -8,7 +8,7 @@ mj-section(background-color='#EDF2F7' padding="20px 17px")
             alt="Version desktop, logo de l'ESA(École Supérieure d'Assurance) avec un groupe d'étudiants et leur enseignant"
             )/
         //-Version Bureau
-            mj-image(
+        mj-image(
             padding="0px"
             border="none"
             css-class="mobile-hide"
@@ -16,7 +16,7 @@ mj-section(background-color='#EDF2F7' padding="20px 17px")
             alt="Version desktop, logo de l'ESA(École Supérieure d'Assurance) avec un groupe d'étudiants et leur enseignant"
             width="480px")/
         //-Version Mobile
-            mj-image(
+        mj-image(
             padding="0px"
             border="none"
             css-class="mobile-show"
