--- a/src/includes/entreprise/_tradingGame.pug
+++ b/src/includes/entreprise/_tradingGame.pug
@@ -1,13 +1,13 @@
 mj-section(background-color='#EDF2F7' padding="20px 17px")
     mj-column(width="40%" padding="8px" )
-        mj-image(
+        //-mj-image(
             padding='0px'
             border='none'
             src='https://i.ibb.co/4xjMZFG/Ass02012025.jpg'
             alt='logo du Trading Game d\'Ecosup Campus'
             width="480px")
         //-Version bureau
-            mj-image(
+        mj-image(
             padding='0px'
             border='none'
             css-class="mobile-hide"
@@ -16,7 +16,7 @@ mj-section(background-color='#EDF2F7' padding="20px 17px")
             width="480px"
             )/
         //-Version mobile
-            mj-image(
+        mj-image(
             padding='0px'
             border='none'
             css-class="mobile-show"
