--- a/src/includes/entreprise/_jobDating.pug
+++ b/src/includes/entreprise/_jobDating.pug
@@ -1,7 +1,7 @@
 //- Interviews IA
 mj-section(background-color='#ffffff' padding="20px 17px")
     mj-column(width='40%' padding="8px")
-        mj-image(
+        //-mj-image(
             padding="0"
             border="none" 
             src='https://i.ibb.co/CKkS7Mcf/Ass06012025.jpg' 
@@ -9,7 +9,7 @@ mj-section(background-color='#ffffff' padding="20px 17px")
             width='480px' 
             )/
         //-Version bureau
-            mj-image(
+        mj-image(
             padding='0' 
             border='none'
             css-class="mobile-hide"
@@ -18,7 +18,7 @@ mj-section(background-color='#ffffff' padding="20px 17px")
             width='480px' 
             )/
         //-Version mobile
-            mj-image(
+        mj-image(
             padding='0' 
             border='none'
             css-class="mobile-show"
@@ -32,7 +32,7 @@ mj-section(background-color='#ffffff' padding="20px 17px")
         mj-text(padding='0' align='left' mj-class="T+1 cA+1") Une chance à saisir le 17&nbsp;avril&nbsp;2025&nbsp;! 
         mj-text(padding='5px 0' mj-class="T+0 cT-0") #[span(style="font-weight:700;color:#2d3748") Ecosup Assurance] organise un événement unique dans la région&nbsp;: #[span(style="font-weight:700;color:#2D3748;") un Job Dating spécial Banque Assurance&nbsp;!]
         mj-text(padding='5px 0' mj-class="T+0 cT-0") Les participants rencontreront de 14h à 17h30 les grands #[span(style="font-weight:700;color:#2d3748;") acteurs de l'assurance et de la banque] pour décrocher leur alternance. 
-        mj-image(padding="5px 0px" border="none" fluid-on-mobile="true" src="https://i.ibb.co/7x40j9Qy/Ass-JD01012025.jpg" alt="logo des entreprises qui particpent au job dating du 17 avril 2025")/
+        //-mj-image(padding="5px 0px" border="none" fluid-on-mobile="true" src="https://i.ibb.co/7x40j9Qy/Ass-JD01012025.jpg" alt="logo des entreprises qui particpent au job dating du 17 avril 2025")/
         mj-text(padding="5px 0" mj-class="T+0 cT-0") Chaque candidat Bénéficiera de conseils personnalisés de nos partenaires, dont #[span(style="font-weight:700;color:#2D3748;") Grafton Recruitement], spécialiste RH du secteur financier et pourra rencontrer l'#[span(style="font-weight:700;color:#2D3748;") OPCO Atlas] : acteur indispensable de l'alternance.
-        mj-image(padding="5px 0px" border="none" fluid-on-mobile="true" src="https://i.ibb.co/XkVT3MgX/Ass-JD02012025.jpg" alt="logo des partenaires Grafton recruitement et Atlas opco")/
+        //-mj-image(padding="5px 0px" border="none" fluid-on-mobile="true" src="https://i.ibb.co/XkVT3MgX/Ass-JD02012025.jpg" alt="logo des partenaires Grafton recruitement et Atlas opco")/
         mj-text(padding="5px 0" mj-class="T+0 cT-0") Avec le soutien de la #[span(style="font-weight:700;color:#2D3748;") MEL et du Département du Nord], cet événement est une opportunité en or pour lancer sa carrière&nbsp;!
