--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -102,7 +102,8 @@
     </mj-section>
     <mj-section background-color="#EDF2F7" padding="20px 17px">
       <mj-column width="40%" padding="8px">
-        <mj-image padding="0px" border="none" width="480px" src="https://i.ibb.co/9KRgW2m/Ass03012025.jpg" alt="Version desktop, logo de l'ESA(École Supérieure d'Assurance) avec un groupe d'étudiants et leur enseignant"/>
+        <mj-image padding="0px" border="none" css-class="mobile-hide" src="https://i.ibb.co/nMczt0FK/ESA012025.jpg" alt="Version desktop, logo de l'ESA(École Supérieure d'Assurance) avec un groupe d'étudiants et leur enseignant" width="480px"/>
+        <mj-image padding="0px" border="none" css-class="mobile-show" src="https://i.ibb.co/3mbWWJ4n/EsaIogo.jpg" alt="Version mobile, logo de l'ESA(École Supérieure d'Assurance) avec un groupe d'étudiants" width="480px"/>
       </mj-column>
       <mj-column width="60%" padding="8px">
         <mj-spacer height="12px"></mj-spacer>
@@ -117,7 +118,8 @@
     </mj-section>
     <mj-section background-color="#ffffff" padding="20px 17px">
       <mj-column width="40%" padding="8px">
-        <mj-image padding="0" border="none" src="https://i.ibb.co/CKkS7Mcf/Ass06012025.jpg" alt="Affiche du Job Dating Assurance et Banque qui aura lieu le 17 avril 2025" width="480px"/>
+        <mj-image padding="0" border="none" css-class="mobile-hide" src="https://i.ibb.co/fGMWPxzg/affiche-Jpo2025.jpg" alt="Affiche du Job Dating Assurance et Banque qui aura lieu le 17 avril 2025" width="480px"/>
+        <mj-image padding="0" border="none" css-class="mobile-show" src="https://i.ibb.co/gCMvQ1J/01job-Dating.jpg" alt="Logo du Job Dating Assurance et Banque qui aura lieu le 17 avril 2025" width="480px"/>
       </mj-column>
       <mj-column width="60%" padding="8px">
         <mj-spacer height="12px"></mj-spacer>
@@ -125,15 +127,14 @@
         <mj-text padding="0" align="left" mj-class="T+1 cA+1">Une chance à saisir le 17&nbsp;avril&nbsp;2025&nbsp;! </mj-text>
         <mj-text padding="5px 0" mj-class="T+0 cT-0"><span style="font-weight:700;color:#2d3748">Ecosup Assurance</span> organise un événement unique dans la région&nbsp;: <span style="font-weight:700;color:#2D3748;">un Job Dating spécial Banque Assurance&nbsp;!</span></mj-text>
         <mj-text padding="5px 0" mj-class="T+0 cT-0">Les participants rencontreront de 14h à 17h30 les grands <span style="font-weight:700;color:#2d3748;">acteurs de l'assurance et de la banque</span> pour décrocher leur alternance. </mj-text>
-        <mj-image padding="5px 0px" border="none" fluid-on-mobile="true" src="https://i.ibb.co/7x40j9Qy/Ass-JD01012025.jpg" alt="logo des entreprises qui particpent au job dating du 17 avril 2025"/>
         <mj-text padding="5px 0" mj-class="T+0 cT-0">Chaque candidat Bénéficiera de conseils personnalisés de nos partenaires, dont <span style="font-weight:700;color:#2D3748;">Grafton Recruitement</span>, spécialiste RH du secteur financier et pourra rencontrer l'<span style="font-weight:700;color:#2D3748;">OPCO Atlas</span> : acteur indispensable de l'alternance.</mj-text>
-        <mj-image padding="5px 0px" border="none" fluid-on-mobile="true" src="https://i.ibb.co/XkVT3MgX/Ass-JD02012025.jpg" alt="logo des partenaires Grafton recruitement et Atlas opco"/>
         <mj-text padding="5px 0" mj-class="T+0 cT-0">Avec le soutien de la <span style="font-weight:700;color:#2D3748;">MEL et du Département du Nord</span>, cet événement est une opportunité en or pour lancer sa carrière&nbsp;!</mj-text>
       </mj-column>
     </mj-section>
     <mj-section background-color="#EDF2F7" padding="20px 17px">
       <mj-column width="40%" padding="8px">
-        <mj-image padding="0px" border="none" src="https://i.ibb.co/4xjMZFG/Ass02012025.jpg" alt="logo du Trading Game d'Ecosup Campus" width="480px"></mj-image>
+        <mj-image padding="0px" border="none" css-class="mobile-hide" src="https://i.ibb.co/gL3VC4mn/Trading-Game.jpg" alt="logo du Trading Game d'Ecosup Campus" width="480px"/>
+        <mj-image padding="0px" border="none" css-class="mobile-show" src="https://i.ibb.co/sJ5vYgVt/img-Trading-Game012025-1.jpg" alt="logo du Trading Game d'Ecosup Campus" width="480px"/>
       </mj-column>
       <mj-column width="60%" padding="8px">
         <mj-spacer height="12px"></mj-spacer>
