--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -139,11 +139,10 @@
       <mj-column width="60%" padding="8px">
         <mj-spacer height="12px"></mj-spacer>
         <mj-text padding="0" align="left" mj-class="T+2 cA+2" text-transform="uppercase">Trading Game</mj-text>
-        <mj-text padding="0" align="left" mj-class="T+1 cA+1">Une âme de gestionnaire de fonds, les marchés boursiers fascinent...</mj-text>
-        <mj-text padding="5px 0" mj-class="cT-0 T+0">Alors bienvenue à notre <span style="font-weight:700;color:#2d3748;">concours de trading simulé</span>, une opportunité unique pour nos futurs étudiants de mettre à l'épreuve leurs <span style="font-weight:700;color:#2D3748;">compétences en investissement&nbsp;!</span></mj-text>
-        <mj-text padding="5px 0" mj-class="cT-0 T+0">L'inscription à nos Journées Portes Ouvertes permet de participer à ce concours du 25&nbsp;/&nbsp;01&nbsp;/&nbsp;2025 au 25&nbsp;/&nbsp;02&nbsp;/&nbsp;2025. De nombreux lots à gagner&nbsp;! </mj-text>
-        <mj-text padding="5px 0" mj-class="cT-0 T+0"><span style="font-weight:700;color:#2D3748;">Le but du concours est simple&nbsp;</span> Chaque candidat dispose d'un <span style="font-weight:700;color:#2D3748;">capital fictif de 100&nbsp;000&nbsp;euros</span> et le but est de créer un portefeuille d'actions fictif et réaliser le meilleur rendement sur une période d'un mois.</mj-text>
-        <mj-text padding="5px 0" mj-class="cT-0 T+0">Les participants utiliseront une <span style="font-weight:700;color:#2D3748;">plateforme de trading virtuelle ABC Bourse</span> pour acheter et vendre des actions réelles en temps réel mais virtuellement.</mj-text>
+        <mj-text padding="0" align="left" mj-class="T+1 cA+1">Félicitations aux gagnants&nbsp;!</mj-text>
+        <mj-text padding="5px 0" mj-class="cT-0 T+0">Le <span style="font-weight:700;color:#2D3748;">Trading Game</span> touche à sa fin, et nous tenons à féliciter chaleureusement tous les participants qui ont joué le jeu jusqu'aux derniers jours&nbsp;! Un grand bravo à <span style="font-weight:700;color:#2D3748;">Nom du gagnant</span>, qui a su se démarquer en empochant les gains les plus important après un mois de combat acharné sur les marchés financiers mondiaux. </mj-text>
+        <mj-text padding="5px 0" mj-class="cT-0 T+0">Félicitations également à <span style="font-weight:700;color:#2d3748;">Nom du deuxième</span>, qui remporte la deuxième place avec brio&nbsp;! Et un immense bravo à tous les autres participants, qui garderont sans aucun doute un souvenir mémorable de cette aventure boursière.</mj-text>
+        <mj-text padding="5px 0" mj-class="cT-0 T+0">Chez <span style="font-weight:700;color:#2D3748;">EcoSup Campus</span>, il n'y a pas de perdants - chacun a gagné une expérience précieuse&nbsp;!</mj-text>
       </mj-column>
     </mj-section>
     <mj-section background-color="#ffffff" padding="20px 17px">
