modification des blocs pour réaliser une seule lettre

--- a/src/templates/_layout.pug
+++ b/src/templates/_layout.pug
@@ -57,7 +57,7 @@ mjml
             include ../includes/entreprise/_jobDating
         //- block Trading Game
         block tradingGame
-            include ../includes/entreprise/_tradingGame
+            include ../includes/_tradingGame
         //- block cvbook
         block cvbook
             include ../includes/entreprise/_cvbook
