mettre en place du bloc job dating

--- a/src/templates/_layout.pug
+++ b/src/templates/_layout.pug
@@ -49,12 +49,12 @@ mjml
         //- block Edito
         block edito
             include ../includes/entreprise/_edito
-        //-block Lancement Mastère    
-        block mastere
-            include ../includes/entreprise/_mastere
         //-block job dating alternance
         block job Dating
-            include ../includes/entreprise/_jobDating
+            include ../includes/_jobDating
+        //-block Lancement Mastère    
+        block mastere
+            include ../includes/_swisslife
         //- block Trading Game
         block tradingGame
             include ../includes/_tradingGame
