--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -100,6 +100,21 @@
         <mj-text padding-top="5px" padding-bottom="5px" mj-class="T+0 cT-0" font-style="italic">Ensemble, construisons l'avenir de nos étudiants&nbsp;!</mj-text>
       </mj-column>
     </mj-section>
+    <mj-section background-color="#ffffff" padding="20px 17px">
+      <mj-column width="40%" padding="8px">
+        <mj-image padding="0" border="none" css-class="mobile-hide" src="https://i.ibb.co/fGMWPxzg/affiche-Jpo2025.jpg" alt="Affiche du Job Dating Assurance et Banque qui aura lieu le 17 avril 2025" width="480px"/>
+        <mj-image padding="0" border="none" css-class="mobile-show" src="https://i.ibb.co/gCMvQ1J/01job-Dating.jpg" alt="Logo du Job Dating Assurance et Banque qui aura lieu le 17 avril 2025" width="480px"/>
+      </mj-column>
+      <mj-column width="60%" padding="8px">
+        <mj-spacer height="12px"></mj-spacer>
+        <mj-text padding="0" align="left" mj-class="T+2 cA+2" text-transform="uppercase">Job Dating Alternance</mj-text>
+        <mj-text padding="0" align="left" mj-class="T+1 cA+1">Le grand RDV de l'Assurance et de la Banque arrive&nbsp;! </mj-text>
+        <mj-text padding="5px 0" mj-class="T+0 cT-0"><span style="font-weight:700;color:#2d3748">Ecosup Assurance</span> est ravi de vous convier à son <span style="font-weight:700;color:#2D3748;">Job Dating</span> exceptionnel le <span style="font-weight:700;color:#2D3748;">17&nbsp;avril&nbsp;2025</span>, de <span style="font-weight:700;color:#2D3748;">14h à 17h30</span>, dans nos locaux. Un après-midi unique pour rencontrer les plus grands acteurs de l'assurance et de la banque : <span style="font-weight:700;color:#2D3748;">SMA BTP, Caisse d'Epargne, SwissLife, Crédit Agricole PFM, Crédit Agricole Assurance, Verpieren</span>, et bien d'autres&nbsp;!</mj-text>
+        <mj-text padding="5px 0" mj-class="T+0 cT-0">Ne manquez pas cette opportunité de <span style="font-weight:700;color:#2D3748;">booster votre avenir professionnel&nbsp;!</span> A vos CV&nbsp;!</mj-text>
+        <mj-spacer height="10px"></mj-spacer>
+        <mj-text padding="5px 25px" align="right" color="#BA4995" font-size="16px" font-weight="700" line-height="20px"><a href="https://ecosup-assurance.fr/mastere-expert-en-ingenierie-patrimoniale/" style="color:#BA4995;font-size:16px;line-weight:20px;font-weight:700" target="_blank">Inscrivez-vous dès maintenant...</a></mj-text>
+      </mj-column>
+    </mj-section>
     <mj-section background-color="#EDF2F7" padding="20px 17px">
       <mj-column width="40%" padding="8px">
         <mj-image padding="0px" border="none" css-class="mobile-hide" src="https://i.ibb.co/nMczt0FK/ESA012025.jpg" alt="Version desktop, logo de l'ESA(École Supérieure d'Assurance) avec un groupe d'étudiants et leur enseignant" width="480px"/>
@@ -114,21 +129,6 @@
         <mj-text padding="5px 0" mj-class="T+0 cT-0"><span style="font-weight:700;color:#2D3748">L'avenir s'écrit à Ecosup Assurance&nbsp;!</span></mj-text>
         <mj-spacer height="10px"></mj-spacer>
         <mj-text padding="5px 25px" align="right" color="#BA4995" font-size="16px" font-weight="700" line-height="20px"><a href="https://ecosup-assurance.fr/mastere-expert-en-ingenierie-patrimoniale/" style="color:#BA4995;font-size:16px;line-weight:20px;font-weight:700" target="_blank">En savoir plus sur le Mastère...</a></mj-text>
-      </mj-column>
-    </mj-section>
-    <mj-section background-color="#ffffff" padding="20px 17px">
-      <mj-column width="40%" padding="8px">
-        <mj-image padding="0" border="none" css-class="mobile-hide" src="https://i.ibb.co/fGMWPxzg/affiche-Jpo2025.jpg" alt="Affiche du Job Dating Assurance et Banque qui aura lieu le 17 avril 2025" width="480px"/>
-        <mj-image padding="0" border="none" css-class="mobile-show" src="https://i.ibb.co/gCMvQ1J/01job-Dating.jpg" alt="Logo du Job Dating Assurance et Banque qui aura lieu le 17 avril 2025" width="480px"/>
-      </mj-column>
-      <mj-column width="60%" padding="8px">
-        <mj-spacer height="12px"></mj-spacer>
-        <mj-text padding="0" align="left" mj-class="T+2 cA+2" text-transform="uppercase">Job Dating Alternance</mj-text>
-        <mj-text padding="0" align="left" mj-class="T+1 cA+1">Une chance à saisir le 17&nbsp;avril&nbsp;2025&nbsp;! </mj-text>
-        <mj-text padding="5px 0" mj-class="T+0 cT-0"><span style="font-weight:700;color:#2d3748">Ecosup Assurance</span> organise un événement unique dans la région&nbsp;: <span style="font-weight:700;color:#2D3748;">un Job Dating spécial Banque Assurance&nbsp;!</span></mj-text>
-        <mj-text padding="5px 0" mj-class="T+0 cT-0">Les participants rencontreront de 14h à 17h30 les grands <span style="font-weight:700;color:#2d3748;">acteurs de l'assurance et de la banque</span> pour décrocher leur alternance. </mj-text>
-        <mj-text padding="5px 0" mj-class="T+0 cT-0">Chaque candidat Bénéficiera de conseils personnalisés de nos partenaires, dont <span style="font-weight:700;color:#2D3748;">Grafton Recruitement</span>, spécialiste RH du secteur financier et pourra rencontrer l'<span style="font-weight:700;color:#2D3748;">OPCO Atlas</span> : acteur indispensable de l'alternance.</mj-text>
-        <mj-text padding="5px 0" mj-class="T+0 cT-0">Avec le soutien de la <span style="font-weight:700;color:#2D3748;">MEL et du Département du Nord</span>, cet événement est une opportunité en or pour lancer sa carrière&nbsp;!</mj-text>
       </mj-column>
     </mj-section>
     <mj-section background-color="#EDF2F7" padding="20px 17px">
