--- a/src/templates/_layout.pug
+++ b/src/templates/_layout.pug
@@ -48,7 +48,7 @@ mjml
             include ../includes/_hero
         //- block Edito
         block edito
-            include ../includes/entreprise/_edito
+            include ../includes/_edito
         //-block job dating alternance
         block job Dating
             include ../includes/_jobDating
@@ -60,7 +60,7 @@ mjml
             include ../includes/_tradingGame
         //- block cvbook
         block cvbook
-            include ../includes/entreprise/_cvbook
+            include ../includes/_cvbook
         //- block agenda
         block agenda 
             include ../includes/_agenda
