--- a/src/includes/_cvbook.pug
+++ b/src/includes/_cvbook.pug
@@ -6,5 +6,5 @@ mj-section(background-color='#ffffff' padding="20px 17px")
         mj-spacer(height="12px")
         mj-text(padding='0px' align='left' font-size='14px' font-weight='900' color='#944694' line-height='18px' text-transform='uppercase' letter-spacing='1px') Apprentissage
         mj-text(padding='0px' align='left' font-size='20px' font-weight='700' line-height='24px' color='#684092') Votre entreprise recherche un collaborateur ! 
-        mj-text(padding='5px 0px' align='left'  mj-class="T+0 cT-0") Demandez votre accès privilégié à l'espace entreprise pour découvrir #[span(style="color:#2D3748;font-weight:700;") notre CV Book], reprenant tous les #[span(style="color:#2D3748;font-weight:700;") futurs talents] d'Ecosup Assurance Banque en #[span(style="color:#2D3748;font-weight:700;") recherche d'un contrat d'alternance]. 
-        mj-text(padding='5px 0px' align='left'  mj-class="T+0 cT-0") Nous pouvons également vous l'adresser au format PDF sur simple demande.
+        mj-text(padding='5px 0px' align='left'  mj-class="T400 cT-0") Demandez votre accès privilégié à l'espace entreprise pour découvrir #[span(style="color:#2D3748;font-weight:700;") notre CV Book], reprenant tous les #[span(style="color:#2D3748;font-weight:700;") futurs talents] d'Ecosup Assurance Banque en #[span(style="color:#2D3748;font-weight:700;") recherche d'un contrat d'alternance]. 
+        mj-text(padding='5px 0px' align='left'  mj-class="T400 cT-0") Nous pouvons également vous l'adresser au format PDF sur simple demande.
