--- a/src/includes/_swisslife.pug
+++ b/src/includes/_swisslife.pug
@@ -26,7 +26,7 @@ mj-section(background-color='#EDF2F7' padding="20px 17px")
     
     mj-column(width='60%' padding="8px")
         mj-spacer(height="12px")
-        mj-text(padding="0px" align='left' mj-class="T+2 cA+2" text-transform='uppercase') Alternance
+        mj-text(padding="0px" align='left' mj-class="T+2 cA+2" text-transform='uppercase') Partenariat Alternance
         mj-text(padding="0px" align='left' mj-class="T+1 cA+1") Un partenariat d'exception avec SwissLife&nbsp;!
-        mj-text(padding="5px 0" mj-class="T+0 cT-0") C'est un véritable honneur pour notre école d'être partenaire d'un groupe prestigieux tel que SwissLife. Le #[span(style="font-weight:700;color:#2D3748;") 20&nbsp;février&nbsp;2025], nos futurs élèves ont eu la chance de profiter pleinement de ce partenariat en étant invités à une soirée exclusive au siège régional de Lille.
-        mj-text(padding="5px 0" mj-class="T+0 cT-0") Cette rencontre, riche et captivante, a permis à nos talents de rencontrer les managers des services en recherche de nouveaux collaborateurs. #[span(style="font-weight:700;color:#2D3748;") Plus de 20 postes disponibles&nbsp;!] Un bel avenir s'annonce pour nos élèves grâce à cette formidable opportunité.
+        mj-text(padding="5px 0" mj-class="T400 cT-0") C'est un véritable honneur pour notre école d'être partenaire d'un groupe prestigieux tel que SwissLife. Le #[span(style="font-weight:700;color:#2D3748;") 20&nbsp;février&nbsp;2025], nos futurs élèves ont eu la chance de profiter pleinement de ce partenariat en étant invités à une soirée exclusive au siège régional de Lille.
+        mj-text(padding="5px 0" mj-class="T400 cT-0") Cette rencontre, riche et captivante, a permis à nos talents de rencontrer les managers des services en recherche de nouveaux collaborateurs. #[span(style="font-weight:700;color:#2D3748;") Plus de 20 postes disponibles&nbsp;!] Un bel avenir s'annonce pour nos élèves grâce à cette formidable opportunité.
