--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -14,7 +14,8 @@
       <mj-all font-family="Arial, Helvetica, sans-serif"/>
       <mj-class name="T+2" font-family="Arial, Helvetica, sans-serif" font-size="14px" font-weight="900" line-height="18px"></mj-class>
       <mj-class name="T+1" font-family="Arial, Helvetica, sans-serif" font-size="20px" font-weight="700" line-height="24px"></mj-class>
-      <mj-class name="T+0" font-family="Arial, Helvetica, sans-serif" font-size="16px" font-weight="400" line-height="20px"></mj-class>
+      <mj-class name="T400" font-family="Arial, Helvetica, sans-serif" font-size="16px" font-weight="400" line-height="20px"></mj-class>
+      <mj-class name="T700" font-family="Arial, Helvetica, sans-serif" font-size="16px" font-weight="700" line-height="20px"></mj-class>
       <mj-class name="cA+2" color="#944694"></mj-class>
       <mj-class name="cA+1" color="#684092"></mj-class>
       <mj-class name="cT-0" color="#45546e"></mj-class>
@@ -92,12 +93,12 @@
     <mj-section background-color="#ffffff" padding-top="10px" padding-bottom="40px">
       <mj-column width="88%"> 
         <mj-text padding-top="5px" padding-bottom="0" mj-class="T+2 cA+2" text-transform="uppercase">Édito</mj-text>
-        <mj-text padding-top="5px" padding-bottom="5px" mj-class="T+0 cT-0" font-style="italic"><span style="font-weight:700;color:#2D3748;">Quelle nouvelle année&nbsp;!</span></mj-text>
-        <mj-text padding-top="5px" padding-bottom="5px" mj-class="T+0 cT-0" font-style="italic">Pleine de projets et d'ambitions, 2025 s'annonce riche en promesses. </mj-text>
-        <mj-text padding-top="5px" padding-bottom="5px" mj-class="T+0 cT-0" font-style="italic">Et ça démarre maintenant&nbsp;! Je suis particulièrement heureux de vous annoncer le <span style="font-weight:700;color:#2D3748;">lancement de notre nouveau Mastère en Ingénierie Patrimoniale</span> (bac + 5). Ce diplôme, fruit de plusieurs mois de travail, ouvre de nouvelles perspectives à nos étudiants et nous positionne comme un acteur majeur de la formation supérieure dans notre région.</mj-text>
-        <mj-text padding-top="5px" padding-bottom="5px" mj-class="T+0 cT-0" font-style="italic">Mais ce n'est pas tout&nbsp;! Notre <span style="font-weight:700;color:#2D3748;">traditionnelle cérémonie de remise des diplômes</span> a été, une fois de plus, un moment fort en émotions. Voir nos étudiants rayonner de fierté après toutes ces années d'efforts est une immense récompense pour toute l'équipe et un bonheur immense pour leurs familles venues nombreuses malgré les conditions climatiques&nbsp;! </mj-text>
-        <mj-text padding-top="5px" padding-bottom="5px" mj-class="T+0 cT-0" font-style="italic">Je tiens à remercier chaleureusement la ville de Tourcoing, en particulier Madame le Maire Doriane Becue pour votre soutien indéfectible et pour nous avoir accueillis dans les magnifiques salons de la mairie.</mj-text>
-        <mj-text padding-top="5px" padding-bottom="5px" mj-class="T+0 cT-0" font-style="italic">Ensemble, construisons l'avenir de nos étudiants&nbsp;!</mj-text>
+        <mj-text padding-top="5px" padding-bottom="5px" mj-class="T400 cT-0" font-style="italic"><span style="font-weight:700;color:#2D3748;">Quelle nouvelle année&nbsp;!</span></mj-text>
+        <mj-text padding-top="5px" padding-bottom="5px" mj-class="T400 cT-0" font-style="italic">Pleine de projets et d'ambitions, 2025 s'annonce riche en promesses. </mj-text>
+        <mj-text padding-top="5px" padding-bottom="5px" mj-class="T400 cT-0" font-style="italic">Et ça démarre maintenant&nbsp;! Je suis particulièrement heureux de vous annoncer le <span style="font-weight:700;color:#2D3748;">lancement de notre nouveau Mastère en Ingénierie Patrimoniale</span> (bac + 5). Ce diplôme, fruit de plusieurs mois de travail, ouvre de nouvelles perspectives à nos étudiants et nous positionne comme un acteur majeur de la formation supérieure dans notre région.</mj-text>
+        <mj-text padding-top="5px" padding-bottom="5px" mj-class="T400 cT-0" font-style="italic">Mais ce n'est pas tout&nbsp;! Notre <span style="font-weight:700;color:#2D3748;">traditionnelle cérémonie de remise des diplômes</span> a été, une fois de plus, un moment fort en émotions. Voir nos étudiants rayonner de fierté après toutes ces années d'efforts est une immense récompense pour toute l'équipe et un bonheur immense pour leurs familles venues nombreuses malgré les conditions climatiques&nbsp;! </mj-text>
+        <mj-text padding-top="5px" padding-bottom="5px" mj-class="T400 cT-0" font-style="italic">Je tiens à remercier chaleureusement la ville de Tourcoing, en particulier Madame le Maire Doriane Becue pour votre soutien indéfectible et pour nous avoir accueillis dans les magnifiques salons de la mairie.</mj-text>
+        <mj-text padding-top="5px" padding-bottom="5px" mj-class="T400 cT-0" font-style="italic">Ensemble, construisons l'avenir de nos étudiants&nbsp;!</mj-text>
       </mj-column>
     </mj-section>
     <mj-section background-color="#ffffff" padding="20px 17px">
@@ -109,8 +110,8 @@
         <mj-spacer height="12px"></mj-spacer>
         <mj-text padding="0" align="left" mj-class="T+2 cA+2" text-transform="uppercase">Job Dating Alternance</mj-text>
         <mj-text padding="0" align="left" mj-class="T+1 cA+1">Le grand RDV de l'Assurance et de la Banque arrive&nbsp;! </mj-text>
-        <mj-text padding="5px 0" mj-class="T+0 cT-0"><span style="font-weight:700;color:#2d3748">Ecosup Assurance</span> est ravi de vous convier à son <span style="font-weight:700;color:#2D3748;">Job Dating</span> exceptionnel le <span style="font-weight:700;color:#2D3748;">17&nbsp;avril&nbsp;2025</span>, de <span style="font-weight:700;color:#2D3748;">14h à 17h30</span>, dans nos locaux. Un après-midi unique pour rencontrer les plus grands acteurs de l'assurance et de la banque : <span style="font-weight:700;color:#2D3748;">SMA BTP, Caisse d'Epargne, SwissLife, Crédit Agricole PFM, Crédit Agricole Assurance, Verpieren</span>, et bien d'autres&nbsp;!</mj-text>
-        <mj-text padding="5px 0" mj-class="T+0 cT-0">Ne manquez pas cette opportunité de <span style="font-weight:700;color:#2D3748;">booster votre avenir professionnel&nbsp;!</span> A vos CV&nbsp;!</mj-text>
+        <mj-text padding="5px 0" mj-class="T400 cT-0"><span style="font-weight:700;color:#2d3748">Ecosup Assurance</span> est ravi de vous convier à son <span style="font-weight:700;color:#2D3748;">Job Dating</span> exceptionnel le <span style="font-weight:700;color:#2D3748;">17&nbsp;avril&nbsp;2025</span>, de <span style="font-weight:700;color:#2D3748;">14h à 17h30</span>, dans nos locaux. Un après-midi unique pour rencontrer les plus grands acteurs de l'assurance et de la banque : <span style="font-weight:700;color:#2D3748;">SMA BTP, Caisse d'Epargne, SwissLife, Crédit Agricole PFM, Crédit Agricole Assurance, Verpieren</span>, et bien d'autres&nbsp;!</mj-text>
+        <mj-text padding="5px 0" mj-class="T400 cT-0">Ne manquez pas cette opportunité de <span style="font-weight:700;color:#2D3748;">booster votre avenir professionnel&nbsp;!</span> A vos CV&nbsp;!</mj-text>
         <mj-spacer height="10px"></mj-spacer>
         <mj-text padding="5px 25px" align="right" color="#BA4995" font-size="16px" font-weight="700" line-height="20px"><a href="https://ecosup-assurance.fr/mastere-expert-en-ingenierie-patrimoniale/" style="color:#BA4995;font-size:16px;line-weight:20px;font-weight:700" target="_blank">Inscrivez-vous dès maintenant...</a></mj-text>
       </mj-column>
@@ -122,10 +123,26 @@
       </mj-column>
       <mj-column width="60%" padding="8px">
         <mj-spacer height="12px"></mj-spacer>
-        <mj-text padding="0px" align="left" mj-class="T+2 cA+2" text-transform="uppercase">Alternance</mj-text>
+        <mj-text padding="0px" align="left" mj-class="T+2 cA+2" text-transform="uppercase">Partenariat Alternance</mj-text>
+        <mj-text padding="0px" align="left" mj-class="T+1 cA+1">Une collaboration prometteuse avec l'OPCO Atlas&nbsp;!</mj-text>
+        <mj-text padding="5px 0" mj-class="T400 cT-0">C'est avec une immense joie que nos équipes, en collaboration avec celles de l'<span style="font-weight:700;color:#2D3748;">OPCO Atlas</span>, ont partagé un moment convivial au sein de notre école. Ce fut l'occasion de poser les bases d'une future collaboration pour toujours mieux répondre à notre objectif commun : <span style="font-weight:700;color:#2D3748;">faciliter la rencontre entre les jeunes et les entreprises</span>.</mj-text>
+        <mj-text padding="5px 0" mj-class="T400 cT-0"><span style="font-weight:700;color:#2D3748;">OPCO Atlas</span> sera présent à nos côté lors de notre <span style="font-weight:700;color:#2D3748;">JobDating le 17&nbsp;avril&nbsp;2025</span>.</mj-text>
+        <mj-text padding="5px 0" mj-class="T400 cT-0">Nous serons également présents aux côtés de l'<span style="font-weight:700;color:#2D3748;">OPCO Atlas</span> lors de la <span style="font-weight:700;color:#2D3748;">grande manifestation au siège de la région le 6&nbsp;mars&nbsp;2025&nbsp;!</span></mj-text>
+        <mj-text padding="5px 0" mj-class="T400 cT-0">Un grand merci à <span style="font-weight:700;color:#2D3748;">Atika Belaid</span>, qui a rendu possible cette belle collaboration.</mj-text>
+        <mj-text padding="5px 0" mj-class="T700 cT+1">Rendez-vous le 6 mars pour de nouvelles opportunités !</mj-text>
+      </mj-column>
+    </mj-section>
+    <mj-section background-color="#EDF2F7" padding="20px 17px">
+      <mj-column width="40%" padding="8px">
+        <mj-image padding="0px" border="none" css-class="mobile-hide" src="https://i.ibb.co/nMczt0FK/ESA012025.jpg" alt="Version desktop, logo de l'ESA(École Supérieure d'Assurance) avec un groupe d'étudiants et leur enseignant" width="480px"/>
+        <mj-image padding="0px" border="none" css-class="mobile-show" src="https://i.ibb.co/3mbWWJ4n/EsaIogo.jpg" alt="Version mobile, logo de l'ESA(École Supérieure d'Assurance) avec un groupe d'étudiants" width="480px"/>
+      </mj-column>
+      <mj-column width="60%" padding="8px">
+        <mj-spacer height="12px"></mj-spacer>
+        <mj-text padding="0px" align="left" mj-class="T+2 cA+2" text-transform="uppercase">Partenariat Alternance</mj-text>
         <mj-text padding="0px" align="left" mj-class="T+1 cA+1">Un partenariat d'exception avec SwissLife&nbsp;!</mj-text>
-        <mj-text padding="5px 0" mj-class="T+0 cT-0">C'est un véritable honneur pour notre école d'être partenaire d'un groupe prestigieux tel que SwissLife. Le <span style="font-weight:700;color:#2D3748;">20&nbsp;février&nbsp;2025</span>, nos futurs élèves ont eu la chance de profiter pleinement de ce partenariat en étant invités à une soirée exclusive au siège régional de Lille.</mj-text>
-        <mj-text padding="5px 0" mj-class="T+0 cT-0">Cette rencontre, riche et captivante, a permis à nos talents de rencontrer les managers des services en recherche de nouveaux collaborateurs. <span style="font-weight:700;color:#2D3748;">Plus de 20 postes disponibles&nbsp;!</span> Un bel avenir s'annonce pour nos élèves grâce à cette formidable opportunité.</mj-text>
+        <mj-text padding="5px 0" mj-class="T400 cT-0">C'est un véritable honneur pour notre école d'être partenaire d'un groupe prestigieux tel que SwissLife. Le <span style="font-weight:700;color:#2D3748;">20&nbsp;février&nbsp;2025</span>, nos futurs élèves ont eu la chance de profiter pleinement de ce partenariat en étant invités à une soirée exclusive au siège régional de Lille.</mj-text>
+        <mj-text padding="5px 0" mj-class="T400 cT-0">Cette rencontre, riche et captivante, a permis à nos talents de rencontrer les managers des services en recherche de nouveaux collaborateurs. <span style="font-weight:700;color:#2D3748;">Plus de 20 postes disponibles&nbsp;!</span> Un bel avenir s'annonce pour nos élèves grâce à cette formidable opportunité.</mj-text>
       </mj-column>
     </mj-section>
     <mj-section background-color="#EDF2F7" padding="20px 17px">
@@ -137,9 +154,9 @@
         <mj-spacer height="12px"></mj-spacer>
         <mj-text padding="0" align="left" mj-class="T+2 cA+2" text-transform="uppercase">Trading Game</mj-text>
         <mj-text padding="0" align="left" mj-class="T+1 cA+1">Félicitations aux gagnants&nbsp;!</mj-text>
-        <mj-text padding="5px 0" mj-class="cT-0 T+0">Le <span style="font-weight:700;color:#2D3748;">Trading Game</span> touche à sa fin, et nous tenons à féliciter chaleureusement tous les participants qui ont joué le jeu jusqu'aux derniers jours&nbsp;! Un grand bravo à <span style="font-weight:700;color:#2D3748;">Nom du gagnant</span>, qui a su se démarquer en empochant les gains les plus important après un mois de combat acharné sur les marchés financiers mondiaux. </mj-text>
-        <mj-text padding="5px 0" mj-class="cT-0 T+0">Félicitations également à <span style="font-weight:700;color:#2d3748;">Nom du deuxième</span>, qui remporte la deuxième place avec brio&nbsp;! Et un immense bravo à tous les autres participants, qui garderont sans aucun doute un souvenir mémorable de cette aventure boursière.</mj-text>
-        <mj-text padding="5px 0" mj-class="cT-0 T+0">Chez <span style="font-weight:700;color:#2D3748;">EcoSup Campus</span>, il n'y a pas de perdants - chacun a gagné une expérience précieuse&nbsp;!</mj-text>
+        <mj-text padding="5px 0" mj-class="cT-0 T400">Le <span style="font-weight:700;color:#2D3748;">Trading Game</span> touche à sa fin, et nous tenons à féliciter chaleureusement tous les participants qui ont joué le jeu jusqu'aux derniers jours&nbsp;! Un grand bravo à <span style="font-weight:700;color:#2D3748;">Nom du gagnant</span>, qui a su se démarquer en empochant les gains les plus important après un mois de combat acharné sur les marchés financiers mondiaux. </mj-text>
+        <mj-text padding="5px 0" mj-class="cT-0 T400">Félicitations également à <span style="font-weight:700;color:#2d3748;">Nom du deuxième</span>, qui remporte la deuxième place avec brio&nbsp;! Et un immense bravo à tous les autres participants, qui garderont sans aucun doute un souvenir mémorable de cette aventure boursière.</mj-text>
+        <mj-text padding="5px 0" mj-class="cT-0 T400">Chez <span style="font-weight:700;color:#2D3748;">EcoSup Campus</span>, il n'y a pas de perdants - chacun a gagné une expérience précieuse&nbsp;!</mj-text>
       </mj-column>
     </mj-section>
     <mj-section background-color="#ffffff" padding="20px 17px">
@@ -150,8 +167,8 @@
         <mj-spacer height="12px"></mj-spacer>
         <mj-text padding="0px" align="left" font-size="14px" font-weight="900" color="#944694" line-height="18px" text-transform="uppercase" letter-spacing="1px">Apprentissage</mj-text>
         <mj-text padding="0px" align="left" font-size="20px" font-weight="700" line-height="24px" color="#684092">Votre entreprise recherche un collaborateur ! </mj-text>
-        <mj-text padding="5px 0px" align="left" mj-class="T+0 cT-0">Demandez votre accès privilégié à l'espace entreprise pour découvrir <span style="color:#2D3748;font-weight:700;">notre CV Book</span>, reprenant tous les <span style="color:#2D3748;font-weight:700;">futurs talents</span> d'Ecosup Assurance Banque en <span style="color:#2D3748;font-weight:700;">recherche d'un contrat d'alternance</span>. </mj-text>
-        <mj-text padding="5px 0px" align="left" mj-class="T+0 cT-0">Nous pouvons également vous l'adresser au format PDF sur simple demande.</mj-text>
+        <mj-text padding="5px 0px" align="left" mj-class="T400 cT-0">Demandez votre accès privilégié à l'espace entreprise pour découvrir <span style="color:#2D3748;font-weight:700;">notre CV Book</span>, reprenant tous les <span style="color:#2D3748;font-weight:700;">futurs talents</span> d'Ecosup Assurance Banque en <span style="color:#2D3748;font-weight:700;">recherche d'un contrat d'alternance</span>. </mj-text>
+        <mj-text padding="5px 0px" align="left" mj-class="T400 cT-0">Nous pouvons également vous l'adresser au format PDF sur simple demande.</mj-text>
       </mj-column>
     </mj-section>
     <mj-section background-color="#EDF2F7" padding-top="20px" padding-bottom="10px">
