ajout des images des blocs article

--- a/src/includes/_swisslife.pug
+++ b/src/includes/_swisslife.pug
@@ -12,9 +12,9 @@ mj-section(background-color='#EDF2F7' padding="20px 17px")
             padding="0px"
             border="none"
             css-class="mobile-hide"
-            src="https://i.ibb.co/nMczt0FK/ESA012025.jpg"
-            alt="Version desktop, logo de l'ESA(École Supérieure d'Assurance) avec un groupe d'étudiants et leur enseignant"
-            width="480px")/
+            src="./images/swisslife022025.jpg"
+            alt="Afterwork swisslife propose 20 postes en apprentissage"
+            width="210px")/
         //-Version Mobile
         mj-image(
             padding="0px"
