mettre en place des images

--- a/src/includes/_edito.pug
+++ b/src/includes/_edito.pug
@@ -3,7 +3,7 @@
 //-mj-section(background-color='#E7ECf2' padding='0px')
 mj-section(background-color='#ffffff' padding='0px')
     mj-column(width='100%')
-        mj-image(padding='0' border='none' fluid-on-mobile='true' width='600px' src='https://i.ibb.co/ZRsJv5c5/news-Bandeau012025.jpg' alt="Christian Annaloro, responsable pédagogique d'Ecosup Assurance, la remise des diplômes dans la salle des cérémonies de la ville de Tourcoing")/
+        mj-image(padding='0' border='none' fluid-on-mobile='true' width='600px' src='./images/newsBandeau022025.jpg' alt="Christian Annaloro, responsable pédagogique d'Ecosup Assurance, la remise des diplômes dans la salle des cérémonies de la ville de Tourcoing")/
 mj-section(background-color='#ffffff' padding-top='10px' padding-bottom='40px')
         mj-column(width='88%') 
             mj-text(padding-top='5px' padding-bottom='0' mj-class="T+2 cA+2" text-transform='uppercase') Édito
