--- a/src/includes/_opcoAtlas.pug
+++ b/src/includes/_opcoAtlas.pug
@@ -12,7 +12,7 @@ mj-section(background-color='#EDF2F7' padding="20px 17px")
             padding="0px"
             border="none"
             css-class="mobile-hide"
-            src="https://i.ibb.co/nMczt0FK/ESA012025.jpg"
+            src="./images/atlas022025.jpg"
             alt="Version desktop, logo de l'ESA(École Supérieure d'Assurance) avec un groupe d'étudiants et leur enseignant"
             width="480px")/
         //-Version Mobile
