--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -12,14 +12,14 @@
     </mj-raw>
     <mj-attributes>
       <mj-all font-family="Arial, Helvetica, sans-serif"/>
-      <mj-class name="T+2" font-family="Arial, Helvetica, sans-serif" font-size="14px" font-weight="900" line-height="18px"></mj-class>
-      <mj-class name="T+1" font-family="Arial, Helvetica, sans-serif" font-size="20px" font-weight="700" line-height="24px"></mj-class>
-      <mj-class name="T400" font-family="Arial, Helvetica, sans-serif" font-size="16px" font-weight="400" line-height="20px"></mj-class>
-      <mj-class name="T700" font-family="Arial, Helvetica, sans-serif" font-size="16px" font-weight="700" line-height="20px"></mj-class>
-      <mj-class name="cA+2" color="#944694"></mj-class>
-      <mj-class name="cA+1" color="#684092"></mj-class>
-      <mj-class name="cT-0" color="#45546e"></mj-class>
-      <mj-class name="bgcG" background-color="#eff1f5"></mj-class>
+      <mj-class name="T+2" font-family="Arial, Helvetica, sans-serif" font-size="14px" font-weight="900" line-height="18px"/>
+      <mj-class name="T+1" font-family="Arial, Helvetica, sans-serif" font-size="20px" font-weight="700" line-height="24px"/>
+      <mj-class name="T400" font-family="Arial, Helvetica, sans-serif" font-size="16px" font-weight="400" line-height="20px"/>
+      <mj-class name="T700" font-family="Arial, Helvetica, sans-serif" font-size="16px" font-weight="700" line-height="20px"/>
+      <mj-class name="cA+2" color="#944694"/>
+      <mj-class name="cA+1" color="#684092"/>
+      <mj-class name="cT-0" color="#45546e"/>
+      <mj-class name="bgcG" background-color="#eff1f5"/>
     </mj-attributes>
     <mj-breakpoint width="480px"/>
     <mj-style>
@@ -87,7 +87,7 @@
     </mj-section>
     <mj-section background-color="#ffffff" padding="0px">
       <mj-column width="100%">
-        <mj-image padding="0" border="none" fluid-on-mobile="true" width="600px" src="https://i.ibb.co/ZRsJv5c5/news-Bandeau012025.jpg" alt="Christian Annaloro, responsable pédagogique d'Ecosup Assurance, la remise des diplômes dans la salle des cérémonies de la ville de Tourcoing"/>
+        <mj-image padding="0" border="none" fluid-on-mobile="true" width="600px" src="./images/newsBandeau022025.jpg" alt="Christian Annaloro, responsable pédagogique d'Ecosup Assurance, la remise des diplômes dans la salle des cérémonies de la ville de Tourcoing"/>
       </mj-column>
     </mj-section>
     <mj-section background-color="#ffffff" padding-top="10px" padding-bottom="40px">
@@ -117,7 +117,7 @@
     </mj-section>
     <mj-section background-color="#EDF2F7" padding="20px 17px">
       <mj-column width="40%" padding="8px">
-        <mj-image padding="0px" border="none" css-class="mobile-hide" src="https://i.ibb.co/nMczt0FK/ESA012025.jpg" alt="Version desktop, logo de l'ESA(École Supérieure d'Assurance) avec un groupe d'étudiants et leur enseignant" width="480px"/>
+        <mj-image padding="0px" border="none" css-class="mobile-hide" src="./images/atlas022025.jpg" alt="Version desktop, logo de l'ESA(École Supérieure d'Assurance) avec un groupe d'étudiants et leur enseignant" width="480px"/>
         <mj-image padding="0px" border="none" css-class="mobile-show" src="https://i.ibb.co/3mbWWJ4n/EsaIogo.jpg" alt="Version mobile, logo de l'ESA(École Supérieure d'Assurance) avec un groupe d'étudiants" width="480px"/>
       </mj-column>
       <mj-column width="60%" padding="8px">
