--- a/src/templates/_layout.pug
+++ b/src/templates/_layout.pug
@@ -11,15 +11,15 @@ mjml
         mj-attributes
             mj-all(font-family='Arial, Helvetica, sans-serif')/
             //-font
-            mj-class(name="T+2" font-family="Arial, Helvetica, sans-serif" font-size="14px" font-weight="900" line-height="18px")
-            mj-class(name="T+1" font-family="Arial, Helvetica, sans-serif" font-size="20px" font-weight="700" line-height="24px")
-            mj-class(name="T400" font-family="Arial, Helvetica, sans-serif" font-size="16px" font-weight="400" line-height="20px")
-            mj-class(name="T700" font-family="Arial, Helvetica, sans-serif" font-size="16px" font-weight="700" line-height="20px")
+            mj-class(name="T+2" font-family="Arial, Helvetica, sans-serif" font-size="14px" font-weight="900" line-height="18px")/
+            mj-class(name="T+1" font-family="Arial, Helvetica, sans-serif" font-size="20px" font-weight="700" line-height="24px")/
+            mj-class(name="T400" font-family="Arial, Helvetica, sans-serif" font-size="16px" font-weight="400" line-height="20px")/
+            mj-class(name="T700" font-family="Arial, Helvetica, sans-serif" font-size="16px" font-weight="700" line-height="20px")/
             //-color
-            mj-class(name="cA+2" color="#944694")
-            mj-class(name="cA+1" color="#684092")
-            mj-class(name="cT-0" color="#45546e")
-            mj-class(name="bgcG" background-color="#eff1f5")
+            mj-class(name="cA+2" color="#944694")/
+            mj-class(name="cA+1" color="#684092")/
+            mj-class(name="cT-0" color="#45546e")/
+            mj-class(name="bgcG" background-color="#eff1f5")/
         mj-breakpoint(width='480px')/
         mj-style. 
             @media only screen and (max-width:480px) { 
