mettre en place des images partenaires

--- a/src/includes/_partenaires.pug
+++ b/src/includes/_partenaires.pug
@@ -21,6 +21,6 @@ mj-section(background-color="#586c8d" padding="0px 23px")
                 mj-image(padding="0" fluid-on-mobile="true" width="300px" src=logo.image alt=logo.alt)/
     mj-group(width="50%")
             mj-column(width="25%" background-color="#586c8d" padding="2px")
-                mj-image(align="left" padding="0" fluid-on-mobile="true" width="300px" src="https://i.ibb.co/rKV2QH1n/Logo-Vespieren.jpg" alt="logo des Assurances Vespieren")/
+                mj-image(align="left" padding="0" fluid-on-mobile="true" width="300px" src="./images/vespieren.png" alt="logo des Assurances Vespieren")/
             mj-column(width="25%" background-color="#586c8d" padding="2px")
     mj-group(width="50%")
