--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -202,63 +202,63 @@
     <mj-section background-color="#586c8d" padding="0px 23px">
       <mj-group width="50%">
         <mj-column width="25%" background-color="#586c8d" padding="2px">
-          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="https://i.ibb.co/HfG6H83b/LogoAxa.jpg" alt="logo AXA assurance"/>
+          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="./images/axa.png" alt="logo AXA assurance"/>
         </mj-column>
         <mj-column width="25%" background-color="#586c8d" padding="2px">
-          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="https://i.ibb.co/ycTrKBhf/LogoSMA.jpg" alt="logo SMA btp"/>
+          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="./images/sma.png" alt="logo SMA btp"/>
         </mj-column>
         <mj-column width="25%" background-color="#586c8d" padding="2px">
-          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="https://i.ibb.co/Z1bGydsp/LogoDLM.jpg" alt="logo DLM location"/>
+          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="./images/dlm.png" alt="logo DLM location"/>
         </mj-column>
         <mj-column width="25%" background-color="#586c8d" padding="2px">
-          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="https://i.ibb.co/7NjjDVw2/Logo-Concilian.jpg" alt="logo Concilian"/>
-        </mj-column>
-      </mj-group>
-      <mj-group width="50%">
-        <mj-column width="25%" background-color="#586c8d" padding="2px">
-          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="https://i.ibb.co/WWSmKvXZ/Logo-Messange-1.jpg" alt="logo Mésange Prévoyance"/>
-        </mj-column>
-        <mj-column width="25%" background-color="#586c8d" padding="2px">
-          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="https://i.ibb.co/BKQL2JSn/Logo-Henner.jpg" alt="logo groupe Henner"/>
-        </mj-column>
-        <mj-column width="25%" background-color="#586c8d" padding="2px">
-          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="https://i.ibb.co/67qk3wMt/Logo-Allianz.jpg" alt="logo Allianz assurance"/>
-        </mj-column>
-        <mj-column width="25%" background-color="#586c8d" padding="2px">
-          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="https://i.ibb.co/S4G3mtg9/Logo-Credit-Agricole.jpg" alt="logo Crédit Agricole"/>
+          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="./images/concilian.png" alt="logo Concilian"/>
         </mj-column>
       </mj-group>
       <mj-group width="50%">
         <mj-column width="25%" background-color="#586c8d" padding="2px">
-          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="https://i.ibb.co/wFkbN3qf/Logo-Swiss.jpg" alt="logo couleur Swiss Life"/>
+          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="./images/mesange.png" alt="logo Mésange Prévoyance"/>
         </mj-column>
         <mj-column width="25%" background-color="#586c8d" padding="2px">
-          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="https://i.ibb.co/gbt1vJpF/Logo-Humanis-1.jpg" alt="logo couleur Humanis Malakoff"/>
+          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="./images/ghenner.png" alt="logo groupe Henner"/>
         </mj-column>
         <mj-column width="25%" background-color="#586c8d" padding="2px">
-          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="https://i.ibb.co/BVR6w4C4/Logo-Sofinco-1.jpg" alt="logo couleur Sofinco"/>
+          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="./images/allianz.png" alt="logo Allianz assurance"/>
         </mj-column>
         <mj-column width="25%" background-color="#586c8d" padding="2px">
-          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="https://i.ibb.co/012S4CR/Logo-Deledalle.jpg" alt="logo couleur Deledalle courtier d'assurances"/>
-        </mj-column>
-      </mj-group>
-      <mj-group width="50%">
-        <mj-column width="25%" background-color="#586c8d" padding="2px">
-          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="https://i.ibb.co/LDmH5byb/Logo2-M-1.jpg" alt="logo 2M votre courtier assurancess"/>
-        </mj-column>
-        <mj-column width="25%" background-color="#586c8d" padding="2px">
-          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="https://i.ibb.co/WNv8BHGg/logoMMA.jpg" alt="logo MMA assurance"/>
-        </mj-column>
-        <mj-column width="25%" background-color="#586c8d" padding="2px">
-          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="https://i.ibb.co/F4rDBWgZ/Logo-Diot-1.jpg" alt="logo Diot groupe Diot Siaci"/>
-        </mj-column>
-        <mj-column width="25%" background-color="#586c8d" padding="2px">
-          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="https://i.ibb.co/F4PPfbMS/Logo-Caisse-Epargne-1.png" alt="logo Caisse d'Épargne"/>
+          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="./images/cagricole.png" alt="logo Crédit Agricole"/>
         </mj-column>
       </mj-group>
       <mj-group width="50%">
         <mj-column width="25%" background-color="#586c8d" padding="2px">
-          <mj-image align="left" padding="0" fluid-on-mobile="true" width="300px" src="https://i.ibb.co/rKV2QH1n/Logo-Vespieren.jpg" alt="logo des Assurances Vespieren"/>
+          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="./images/swisslife.png" alt="logo couleur Swiss Life"/>
+        </mj-column>
+        <mj-column width="25%" background-color="#586c8d" padding="2px">
+          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="./images/malakoff.png" alt="logo couleur Humanis Malakoff"/>
+        </mj-column>
+        <mj-column width="25%" background-color="#586c8d" padding="2px">
+          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="./images/sofinco.png" alt="logo couleur Sofinco"/>
+        </mj-column>
+        <mj-column width="25%" background-color="#586c8d" padding="2px">
+          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="./images/deledalle.png" alt="logo couleur Deledalle courtier d'assurances"/>
+        </mj-column>
+      </mj-group>
+      <mj-group width="50%">
+        <mj-column width="25%" background-color="#586c8d" padding="2px">
+          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="./images/2m.png" alt="logo 2M votre courtier assurancess"/>
+        </mj-column>
+        <mj-column width="25%" background-color="#586c8d" padding="2px">
+          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="./images/mma.png" alt="logo MMA assurance"/>
+        </mj-column>
+        <mj-column width="25%" background-color="#586c8d" padding="2px">
+          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="./images/diot.png" alt="logo Diot groupe Diot Siaci"/>
+        </mj-column>
+        <mj-column width="25%" background-color="#586c8d" padding="2px">
+          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="./images/cepargne.png" alt="logo Caisse d'Épargne"/>
+        </mj-column>
+      </mj-group>
+      <mj-group width="50%">
+        <mj-column width="25%" background-color="#586c8d" padding="2px">
+          <mj-image align="left" padding="0" fluid-on-mobile="true" width="300px" src="./images/vespieren.png" alt="logo des Assurances Vespieren"/>
         </mj-column>
         <mj-column width="25%" background-color="#586c8d" padding="2px"></mj-column>
       </mj-group>
