amélioration du bloc agenda

--- a/src/includes/_agenda.pug
+++ b/src/includes/_agenda.pug
@@ -2,23 +2,23 @@
 -
     const affichesList1 = [
         {
-            'image':'https://i.ibb.co/r2FnHCk1/jpo29032025.jpg',
-            'alt':'Affiche de la journée portes ouvertes du samedi 29 mars 2025 de 9h30 à 13h'
+            'image':'./images/afAtlas032025.png',
+            'alt':'Rencontre - l\'alternance : un passeport pour une formation dans le supérieur 6 mars'
         },
         {
-            'image':'https://i.ibb.co/cch56V80/job-Dating17042025.jpgg',
-            'alt':'Présentation du job dating qui aura lieu le jeudi 17 avril 2025 de 14h à 17h30'
+            'image':'./images/afEtudiant032025.png',
+            'alt':'Salon de l\'Étudiant : Formations et recrutement en alternance 21 et 22 mars'
         }
     ]
 -
     const affichesList2 = [
         {
-            'image':'https://i.ibb.co/6ckPBZhK/jpo26042025.jpg',
-            'alt':'Affiche de la journée portes ouvertes du samedi 26 avril 2025 de 9h30 à 13h'
+            'image':'./images/afJpo032025.png',
+            'alt':'Affiche de la journée portes ouvertes du samedi 29 mars 2025 de 9h30 à 13h'
         },
         {
             'image':'https://i.ibb.co/WvNcg94G/affiche-Jpo24052025.jpg',
-            'alt':'Affiche de la journée portes ouvertes du samedi 24 mai 2025 de 9h30 à 17h'
+            'alt':'Affiche du job dating du jeudi 17 avril de  '
         }
     ]
 
