--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -115,7 +115,7 @@
         <mj-text padding="5px 25px" align="right" color="#BA4995" font-size="16px" font-weight="700" line-height="20px"><a href="https://ecosup-assurance.fr/mastere-expert-en-ingenierie-patrimoniale/" style="color:#BA4995;font-size:16px;line-weight:20px;font-weight:700" target="_blank">Inscrivez-vous dès maintenant...</a></mj-text>
       </mj-column>
     </mj-section>
-    <mj-section background-color="#EDF2F7" padding="20px 17px">
+    <mj-section background-color="#ffffff" padding="20px 17px">
       <mj-column width="40%" padding="8px">
         <mj-image padding="0px" border="none" css-class="mobile-hide" src="./images/atlas022025.jpg" alt="Version desktop, logo de l'ESA(École Supérieure d'Assurance) avec un groupe d'étudiants et leur enseignant" width="480px"/>
         <mj-image padding="0px" border="none" css-class="mobile-show" src="https://i.ibb.co/3mbWWJ4n/EsaIogo.jpg" alt="Version mobile, logo de l'ESA(École Supérieure d'Assurance) avec un groupe d'étudiants" width="480px"/>
@@ -179,18 +179,18 @@
     <mj-section background-color="#EDF2F7" padding-top="0" padding-left="23px" padding-right="23px">
       <mj-group width="50%">
         <mj-column width="50%" padding="2px">
-          <mj-image padding="0" border="none" fluid-on-mobile="true" width="480px" src="https://i.ibb.co/r2FnHCk1/jpo29032025.jpg" alt="Affiche de la journée portes ouvertes du samedi 29 mars 2025 de 9h30 à 13h"/>
+          <mj-image padding="0" border="none" fluid-on-mobile="true" width="480px" src="./images/afAtlas032025.png" alt="Rencontre - l'alternance : un passeport pour une formation dans le supérieur 6 mars"/>
         </mj-column>
         <mj-column width="50%" padding="2px">
-          <mj-image padding="0" border="none" fluid-on-mobile="true" width="480px" src="https://i.ibb.co/cch56V80/job-Dating17042025.jpgg" alt="Présentation du job dating qui aura lieu le jeudi 17 avril 2025 de 14h à 17h30"/>
+          <mj-image padding="0" border="none" fluid-on-mobile="true" width="480px" src="./images/afEtudiant032025.png" alt="Salon de l'Étudiant : Formations et recrutement en alternance 21 et 22 mars"/>
         </mj-column>
       </mj-group>
       <mj-group width="50%">
         <mj-column width="50%" padding="2px">
-          <mj-image padding="0" border="none" fluid-on-mobile="true" width="480px" src="https://i.ibb.co/6ckPBZhK/jpo26042025.jpg" alt="Affiche de la journée portes ouvertes du samedi 26 avril 2025 de 9h30 à 13h"/>
+          <mj-image padding="0" border="none" fluid-on-mobile="true" width="480px" src="./images/afJpo032025.png" alt="Affiche de la journée portes ouvertes du samedi 29 mars 2025 de 9h30 à 13h"/>
         </mj-column>
         <mj-column width="50%" padding="2px">
-          <mj-image padding="0" border="none" fluid-on-mobile="true" width="480px" src="https://i.ibb.co/WvNcg94G/affiche-Jpo24052025.jpg" alt="Affiche de la journée portes ouvertes du samedi 24 mai 2025 de 9h30 à 17h"/>
+          <mj-image padding="0" border="none" fluid-on-mobile="true" width="480px" src="https://i.ibb.co/WvNcg94G/affiche-Jpo24052025.jpg" alt="Affiche du job dating du jeudi 17 avril de  "/>
         </mj-column>
       </mj-group>
     </mj-section>
