finalisation des blocs des articles

--- a/src/includes/_opcoAtlas.pug
+++ b/src/includes/_opcoAtlas.pug
@@ -12,8 +12,8 @@ mj-section(background-color='#ffffff' padding="20px 17px")
             padding="0px"
             border="none"
             css-class="mobile-hide"
-            src="./images/atlas022025.jpg"
-            alt="Version desktop, logo de l'ESA(École Supérieure d'Assurance) avec un groupe d'étudiants et leur enseignant"
+            src="./images/afAtlas032025.png"
+            alt="Rencontre - l'alternance : un passeport pour une formation dans le supérieur le 6 mars de 9h à 12h30 "
             width="480px")/
         //-Version Mobile
         mj-image(
