--- a/src/includes/_swisslife.pug
+++ b/src/includes/_swisslife.pug
@@ -12,7 +12,7 @@ mj-section(background-color='#EDF2F7' padding="20px 17px")
             padding="0px"
             border="none"
             css-class="mobile-hide"
-            src="./images/swisslife022025.jpg"
+            src="./images/afSwisslife.png"
             alt="Afterwork swisslife propose 20 postes en apprentissage"
             width="210px")/
         //-Version Mobile
