--- a/src/includes/_tradingGame.pug
+++ b/src/includes/_tradingGame.pug
@@ -11,7 +11,7 @@ mj-section(background-color='#EDF2F7' padding="20px 17px")
             padding='0px'
             border='none'
             css-class="mobile-hide"
-            src='./images/tradingame022025.jpg'
+            src='./images/tradingGaming.png'
             alt='logo du Trading Game d\'Ecosup Campus'
             width="480px"
             )/
