--- a/src/includes/_jobDating.pug
+++ b/src/includes/_jobDating.pug
@@ -13,7 +13,7 @@ mj-section(background-color='#EDF2F7' padding="20px 17px")
             padding='0' 
             border='none'
             css-class="mobile-hide"
-            src='https://i.ibb.co/fGMWPxzg/affiche-Jpo2025.jpg' 
+            src='./images/afJobDating032025.png' 
             alt='Affiche du Job Dating Assurance et Banque qui aura lieu le 17 avril 2025'
             width='480px' 
             )/
