revoir les dimensions des images des blocs

--- a/src/includes/_agenda.pug
+++ b/src/includes/_agenda.pug
@@ -22,11 +22,11 @@
         }
     ]
 
-mj-section(background-color="#EDF2F7" padding-top="20px" padding-bottom="10px")
+mj-section(background-color="#ffffff" padding-top="20px" padding-bottom="10px")
     mj-column
         mj-text(padding='0 25px' align='left' font-size='14px' font-weight='900' color='#944694' line-height='18px' text-transform='uppercase' letter-spacing='1px') À vos Agendas
         mj-text(padding='0 25px' align='left' font-size='20px' font-weight='700' line-height='24px' color='#684092') Salon, Job Dating et Journées Portes Ouvertes
-mj-section(background-color='#EDF2F7' padding-top="0" padding-left="23px" padding-right="23px")
+mj-section(background-color='#ffffff' padding-top="0" padding-left="23px" padding-right="23px")
     mj-group(width="50%")
         each affiche in affichesList1
             mj-column(width='50%' padding="2px")
