--- a/src/includes/_cvbook.pug
+++ b/src/includes/_cvbook.pug
@@ -1,5 +1,5 @@
 //- CvBook
-mj-section(background-color='#ffffff' padding="20px 17px")
+mj-section(background-color='#EDF2F7' padding="20px 17px")
     mj-column(width='40%' padding="8px")
         mj-image(padding='0' border='none' width="480px" src='https://i.ibb.co/5hb83Xgm/cv-Book042025-1.jpg' alt='Couverture du nouveau CV Book avec de nouveaux étudiants')/
     mj-column(width='60%' padding="8px")
@@ -8,3 +8,5 @@ mj-section(background-color='#ffffff' padding="20px 17px")
         mj-text(padding='0px' align='left' font-size='20px' font-weight='700' line-height='24px' color='#684092') Votre entreprise recherche un collaborateur ! 
         mj-text(padding='5px 0px' align='left'  mj-class="T400 cT-0") Demandez votre accès privilégié à l'espace entreprise pour découvrir #[span(style="color:#2D3748;font-weight:700;") notre CV Book], reprenant tous les #[span(style="color:#2D3748;font-weight:700;") futurs talents] d'Ecosup Assurance Banque en #[span(style="color:#2D3748;font-weight:700;") recherche d'un contrat d'alternance]. 
         mj-text(padding='5px 0px' align='left'  mj-class="T400 cT-0") Nous pouvons également vous l'adresser au format PDF sur simple demande.
+        mj-spacer(height="10px")
+        mj-text(padding="5px 25px" align='right' color='#BA4995' font-size="16px" font-weight='700' line-height="20px") #[a(href='https://ecosup-assurance.fr/mastere-expert-en-ingenierie-patrimoniale/' style='color:#BA4995;font-size:16px;line-weight:20px;font-weight:700' target='_blank') Téléchargez le cvBook...]
