--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -102,7 +102,7 @@
     </mj-section>
     <mj-section background-color="#EDF2F7" padding="20px 17px">
       <mj-column width="40%" padding="8px">
-        <mj-image padding="0" border="none" css-class="mobile-hide" src="./images/afJobDating032025.png" alt="Affiche du Job Dating Assurance et Banque qui aura lieu le 17 avril 2025" width="480px"/>
+        <mj-image padding="0" border="none" css-class="mobile-hide" src="./images/afJobDating032025.png" alt="Affiche du Job Dating Assurance et Banque qui aura lieu le 17 avril 2025" width="210px"/>
         <mj-image padding="0" border="none" css-class="mobile-show" src="https://i.ibb.co/gCMvQ1J/01job-Dating.jpg" alt="Logo du Job Dating Assurance et Banque qui aura lieu le 17 avril 2025" width="480px"/>
       </mj-column>
       <mj-column width="60%" padding="8px">
@@ -117,7 +117,7 @@
     </mj-section>
     <mj-section background-color="#ffffff" padding="20px 17px">
       <mj-column width="40%" padding="8px">
-        <mj-image padding="0px" border="none" css-class="mobile-hide" src="./images/afAtlas032025.png" alt="Rencontre - l'alternance : un passeport pour une formation dans le supérieur le 6 mars de 9h à 12h30 " width="480px"/>
+        <mj-image padding="0px" border="none" css-class="mobile-hide" src="./images/afAtlas032025.png" alt="Rencontre - l'alternance : un passeport pour une formation dans le supérieur le 6 mars de 9h à 12h30 " width="210px"/>
         <mj-image padding="0px" border="none" css-class="mobile-show" src="https://i.ibb.co/3mbWWJ4n/EsaIogo.jpg" alt="Version mobile, logo de l'ESA(École Supérieure d'Assurance) avec un groupe d'étudiants" width="480px"/>
       </mj-column>
       <mj-column width="60%" padding="8px">
@@ -146,7 +146,7 @@
     </mj-section>
     <mj-section background-color="#ffffff" padding="20px 17px">
       <mj-column width="40%" padding="8px">
-        <mj-image padding="0px" border="none" css-class="mobile-hide" src="./images/tradingGaming.png" alt="logo du Trading Game d'Ecosup Campus" width="480px"/>
+        <mj-image padding="0px" border="none" css-class="mobile-hide" src="./images/tradingGaming.png" alt="logo du Trading Game d'Ecosup Campus" width="210px"/>
         <mj-image padding="0px" border="none" css-class="mobile-show" src="https://i.ibb.co/sJ5vYgVt/img-Trading-Game012025-1.jpg" alt="logo du Trading Game d'Ecosup Campus" width="480px"/>
       </mj-column>
       <mj-column width="60%" padding="8px">
@@ -158,7 +158,7 @@
         <mj-text padding="5px 0" mj-class="cT-0 T400">Chez <span style="font-weight:700;color:#2D3748;">EcoSup Campus</span>, il n'y a pas de perdant - chacun a gagné une expérience précieuse&nbsp;!</mj-text>
       </mj-column>
     </mj-section>
-    <mj-section background-color="#ffffff" padding="20px 17px">
+    <mj-section background-color="#EDF2F7" padding="20px 17px">
       <mj-column width="40%" padding="8px">
         <mj-image padding="0" border="none" width="480px" src="https://i.ibb.co/5hb83Xgm/cv-Book042025-1.jpg" alt="Couverture du nouveau CV Book avec de nouveaux étudiants"/>
       </mj-column>
@@ -168,15 +168,17 @@
         <mj-text padding="0px" align="left" font-size="20px" font-weight="700" line-height="24px" color="#684092">Votre entreprise recherche un collaborateur ! </mj-text>
         <mj-text padding="5px 0px" align="left" mj-class="T400 cT-0">Demandez votre accès privilégié à l'espace entreprise pour découvrir <span style="color:#2D3748;font-weight:700;">notre CV Book</span>, reprenant tous les <span style="color:#2D3748;font-weight:700;">futurs talents</span> d'Ecosup Assurance Banque en <span style="color:#2D3748;font-weight:700;">recherche d'un contrat d'alternance</span>. </mj-text>
         <mj-text padding="5px 0px" align="left" mj-class="T400 cT-0">Nous pouvons également vous l'adresser au format PDF sur simple demande.</mj-text>
+        <mj-spacer height="10px"></mj-spacer>
+        <mj-text padding="5px 25px" align="right" color="#BA4995" font-size="16px" font-weight="700" line-height="20px"><a href="https://ecosup-assurance.fr/mastere-expert-en-ingenierie-patrimoniale/" style="color:#BA4995;font-size:16px;line-weight:20px;font-weight:700" target="_blank">Téléchargez le cvBook...</a></mj-text>
       </mj-column>
     </mj-section>
-    <mj-section background-color="#EDF2F7" padding-top="20px" padding-bottom="10px">
+    <mj-section background-color="#ffffff" padding-top="20px" padding-bottom="10px">
       <mj-column>
         <mj-text padding="0 25px" align="left" font-size="14px" font-weight="900" color="#944694" line-height="18px" text-transform="uppercase" letter-spacing="1px">À vos Agendas</mj-text>
         <mj-text padding="0 25px" align="left" font-size="20px" font-weight="700" line-height="24px" color="#684092">Salon, Job Dating et Journées Portes Ouvertes</mj-text>
       </mj-column>
     </mj-section>
-    <mj-section background-color="#EDF2F7" padding-top="0" padding-left="23px" padding-right="23px">
+    <mj-section background-color="#ffffff" padding-top="0" padding-left="23px" padding-right="23px">
       <mj-group width="50%">
         <mj-column width="50%" padding="2px">
           <mj-image padding="0" fluid-on-mobile="true" width="215px" src="./images/afAtlas032025.png" alt="Rencontre - l'alternance : un passeport pour une formation dans le supérieur 6 mars"/>
@@ -202,63 +204,63 @@
     <mj-section background-color="#586c8d" padding="0px 23px">
       <mj-group width="50%">
         <mj-column width="25%" background-color="#586c8d" padding="2px">
-          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="./images/axa.png" alt="logo AXA assurance"/>
+          <mj-image padding="0" fluid-on-mobile="true" width="105px" src="./images/axa.png" alt="logo AXA assurance"/>
         </mj-column>
         <mj-column width="25%" background-color="#586c8d" padding="2px">
-          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="./images/sma.png" alt="logo SMA btp"/>
+          <mj-image padding="0" fluid-on-mobile="true" width="105px" src="./images/sma.png" alt="logo SMA btp"/>
         </mj-column>
         <mj-column width="25%" background-color="#586c8d" padding="2px">
-          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="./images/dlm.png" alt="logo DLM location"/>
+          <mj-image padding="0" fluid-on-mobile="true" width="105px" src="./images/dlm.png" alt="logo DLM location"/>
         </mj-column>
         <mj-column width="25%" background-color="#586c8d" padding="2px">
-          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="./images/concilian.png" alt="logo Concilian"/>
-        </mj-column>
-      </mj-group>
-      <mj-group width="50%">
-        <mj-column width="25%" background-color="#586c8d" padding="2px">
-          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="./images/mesange.png" alt="logo Mésange Prévoyance"/>
-        </mj-column>
-        <mj-column width="25%" background-color="#586c8d" padding="2px">
-          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="./images/ghenner.png" alt="logo groupe Henner"/>
-        </mj-column>
-        <mj-column width="25%" background-color="#586c8d" padding="2px">
-          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="./images/allianz.png" alt="logo Allianz assurance"/>
-        </mj-column>
-        <mj-column width="25%" background-color="#586c8d" padding="2px">
-          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="./images/cagricole.png" alt="logo Crédit Agricole"/>
+          <mj-image padding="0" fluid-on-mobile="true" width="105px" src="./images/concilian.png" alt="logo Concilian"/>
         </mj-column>
       </mj-group>
       <mj-group width="50%">
         <mj-column width="25%" background-color="#586c8d" padding="2px">
-          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="./images/swisslife.png" alt="logo couleur Swiss Life"/>
+          <mj-image padding="0" fluid-on-mobile="true" width="105px" src="./images/mesange.png" alt="logo Mésange Prévoyance"/>
         </mj-column>
         <mj-column width="25%" background-color="#586c8d" padding="2px">
-          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="./images/malakoff.png" alt="logo couleur Humanis Malakoff"/>
+          <mj-image padding="0" fluid-on-mobile="true" width="105px" src="./images/ghenner.png" alt="logo groupe Henner"/>
         </mj-column>
         <mj-column width="25%" background-color="#586c8d" padding="2px">
-          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="./images/sofinco.png" alt="logo couleur Sofinco"/>
+          <mj-image padding="0" fluid-on-mobile="true" width="105px" src="./images/allianz.png" alt="logo Allianz assurance"/>
         </mj-column>
         <mj-column width="25%" background-color="#586c8d" padding="2px">
-          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="./images/deledalle.png" alt="logo couleur Deledalle courtier d'assurances"/>
-        </mj-column>
-      </mj-group>
-      <mj-group width="50%">
-        <mj-column width="25%" background-color="#586c8d" padding="2px">
-          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="./images/2m.png" alt="logo 2M votre courtier assurancess"/>
-        </mj-column>
-        <mj-column width="25%" background-color="#586c8d" padding="2px">
-          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="./images/mma.png" alt="logo MMA assurance"/>
-        </mj-column>
-        <mj-column width="25%" background-color="#586c8d" padding="2px">
-          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="./images/diot.png" alt="logo Diot groupe Diot Siaci"/>
-        </mj-column>
-        <mj-column width="25%" background-color="#586c8d" padding="2px">
-          <mj-image padding="0" fluid-on-mobile="true" width="300px" src="./images/cepargne.png" alt="logo Caisse d'Épargne"/>
+          <mj-image padding="0" fluid-on-mobile="true" width="105px" src="./images/cagricole.png" alt="logo Crédit Agricole"/>
         </mj-column>
       </mj-group>
       <mj-group width="50%">
         <mj-column width="25%" background-color="#586c8d" padding="2px">
-          <mj-image align="left" padding="0" fluid-on-mobile="true" width="300px" src="./images/vespieren.png" alt="logo des Assurances Vespieren"/>
+          <mj-image padding="0" fluid-on-mobile="true" width="105px" src="./images/swisslife.png" alt="logo couleur Swiss Life"/>
+        </mj-column>
+        <mj-column width="25%" background-color="#586c8d" padding="2px">
+          <mj-image padding="0" fluid-on-mobile="true" width="105px" src="./images/malakoff.png" alt="logo couleur Humanis Malakoff"/>
+        </mj-column>
+        <mj-column width="25%" background-color="#586c8d" padding="2px">
+          <mj-image padding="0" fluid-on-mobile="true" width="105px" src="./images/sofinco.png" alt="logo couleur Sofinco"/>
+        </mj-column>
+        <mj-column width="25%" background-color="#586c8d" padding="2px">
+          <mj-image padding="0" fluid-on-mobile="true" width="105px" src="./images/deledalle.png" alt="logo couleur Deledalle courtier d'assurances"/>
+        </mj-column>
+      </mj-group>
+      <mj-group width="50%">
+        <mj-column width="25%" background-color="#586c8d" padding="2px">
+          <mj-image padding="0" fluid-on-mobile="true" width="105px" src="./images/2m.png" alt="logo 2M votre courtier assurancess"/>
+        </mj-column>
+        <mj-column width="25%" background-color="#586c8d" padding="2px">
+          <mj-image padding="0" fluid-on-mobile="true" width="105px" src="./images/mma.png" alt="logo MMA assurance"/>
+        </mj-column>
+        <mj-column width="25%" background-color="#586c8d" padding="2px">
+          <mj-image padding="0" fluid-on-mobile="true" width="105px" src="./images/diot.png" alt="logo Diot groupe Diot Siaci"/>
+        </mj-column>
+        <mj-column width="25%" background-color="#586c8d" padding="2px">
+          <mj-image padding="0" fluid-on-mobile="true" width="105px" src="./images/cepargne.png" alt="logo Caisse d'Épargne"/>
+        </mj-column>
+      </mj-group>
+      <mj-group width="50%">
+        <mj-column width="25%" background-color="#586c8d" padding="2px">
+          <mj-image align="left" padding="0" fluid-on-mobile="true" width="105px" src="./images/vespieren.png" alt="logo des Assurances Vespieren"/>
         </mj-column>
         <mj-column width="25%" background-color="#586c8d" padding="2px"></mj-column>
       </mj-group>
