mise en forme des blocs footer

--- a/src/includes/_agenda.pug
+++ b/src/includes/_agenda.pug
@@ -24,8 +24,8 @@
 
 mj-section(background-color="#ffffff" padding-top="20px" padding-bottom="10px")
     mj-column
-        mj-text(padding='0 25px' align='left' font-size='14px' font-weight='900' color='#944694' line-height='18px' text-transform='uppercase' letter-spacing='1px') À vos Agendas
-        mj-text(padding='0 25px' align='left' font-size='20px' font-weight='700' line-height='24px' color='#684092') Salon, Job Dating et Journées Portes Ouvertes
+        mj-text(padding='0 25px' align='left' mj-class="T+2 cA+2" text-transform='uppercase') À vos Agendas
+        mj-text(padding='0 25px' align='left' mj-class="T+1 cA+1") Salon, Job Dating et Journées Portes Ouvertes
 mj-section(background-color='#ffffff' padding-top="0" padding-left="23px" padding-right="23px")
     mj-group(width="50%")
         each affiche in affichesList1
