--- a/src/includes/_cvbook.pug
+++ b/src/includes/_cvbook.pug
@@ -4,8 +4,8 @@ mj-section(background-color='#EDF2F7' padding="20px 17px")
         mj-image(padding='0' border='none' width="480px" src='https://i.ibb.co/5hb83Xgm/cv-Book042025-1.jpg' alt='Couverture du nouveau CV Book avec de nouveaux étudiants')/
     mj-column(width='60%' padding="8px")
         mj-spacer(height="12px")
-        mj-text(padding='0px' align='left' font-size='14px' font-weight='900' color='#944694' line-height='18px' text-transform='uppercase' letter-spacing='1px') Apprentissage
-        mj-text(padding='0px' align='left' font-size='20px' font-weight='700' line-height='24px' color='#684092') Votre entreprise recherche un collaborateur ! 
+        mj-text(padding='0px' align='left' mj-class="T+2 cA+2" text-transform='uppercase') Apprentissage
+        mj-text(padding='0px' align='left' mj-class="T+1 cA+1") Votre entreprise recherche un collaborateur ! 
         mj-text(padding='5px 0px' align='left'  mj-class="T400 cT-0") Demandez votre accès privilégié à l'espace entreprise pour découvrir #[span(style="color:#2D3748;font-weight:700;") notre CV Book], reprenant tous les #[span(style="color:#2D3748;font-weight:700;") futurs talents] d'Ecosup Assurance Banque en #[span(style="color:#2D3748;font-weight:700;") recherche d'un contrat d'alternance]. 
         mj-text(padding='5px 0px' align='left'  mj-class="T400 cT-0") Nous pouvons également vous l'adresser au format PDF sur simple demande.
         mj-spacer(height="10px")
