ajustement des images pour mobile des blocs trading Game et swisslife

--- a/src/includes/_swisslife.pug
+++ b/src/includes/_swisslife.pug
@@ -20,9 +20,9 @@ mj-section(background-color='#EDF2F7' padding="20px 17px")
             padding="0px"
             border="none"
             css-class="mobile-show"
-            src="https://i.ibb.co/3mbWWJ4n/EsaIogo.jpg"
-            alt="Version mobile, logo de l'ESA(École Supérieure d'Assurance) avec un groupe d'étudiants"
-            width="480px")/
+            src="./images/swisslife022025.png"
+            alt="Afterwork swissLife,l'évènement propose 20 postes en apprentissage"
+            width="210px")/
     
     mj-column(width='60%' padding="8px")
         mj-spacer(height="12px")
