--- a/src/includes/_tradingGame.pug
+++ b/src/includes/_tradingGame.pug
@@ -20,9 +20,9 @@ mj-section(background-color='#ffffff' padding="20px 17px")
             padding='0px'
             border='none'
             css-class="mobile-show"
-            src='https://i.ibb.co/sJ5vYgVt/img-Trading-Game012025-1.jpg'
+            src='./images/trading022025.png'
             alt='logo du Trading Game d\'Ecosup Campus'
-            width="480px"
+            width="210px"
             )/
     mj-column(width='60%' padding="8px")
         mj-spacer(height="12px")
