--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -138,7 +138,7 @@
     <mj-section background-color="#EDF2F7" padding="20px 17px">
       <mj-column width="40%" padding="8px">
         <mj-image padding="0px" border="none" css-class="mobile-hide" src="./images/afSwisslife.png" alt="Afterwork swisslife propose 20 postes en apprentissage" width="210px"/>
-        <mj-image padding="0px" border="none" css-class="mobile-show" src="https://i.ibb.co/3mbWWJ4n/EsaIogo.jpg" alt="Version mobile, logo de l'ESA(École Supérieure d'Assurance) avec un groupe d'étudiants" width="480px"/>
+        <mj-image padding="0px" border="none" css-class="mobile-show" src="./images/swisslife022025.png" alt="Afterwork swissLife,l'évènement propose 20 postes en apprentissage" width="210px"/>
       </mj-column>
       <mj-column width="60%" padding="8px">
         <mj-spacer height="12px"></mj-spacer>
@@ -151,7 +151,7 @@
     <mj-section background-color="#ffffff" padding="20px 17px">
       <mj-column width="40%" padding="8px">
         <mj-image padding="0px" border="none" css-class="mobile-hide" src="./images/tradingGaming.png" alt="logo du Trading Game d'Ecosup Campus" width="210px"/>
-        <mj-image padding="0px" border="none" css-class="mobile-show" src="https://i.ibb.co/sJ5vYgVt/img-Trading-Game012025-1.jpg" alt="logo du Trading Game d'Ecosup Campus" width="480px"/>
+        <mj-image padding="0px" border="none" css-class="mobile-show" src="./images/trading022025.png" alt="logo du Trading Game d'Ecosup Campus" width="210px"/>
       </mj-column>
       <mj-column width="60%" padding="8px">
         <mj-spacer height="12px"></mj-spacer>
@@ -164,7 +164,7 @@
     </mj-section>
     <mj-section background-color="#EDF2F7" padding="20px 17px">
       <mj-column width="40%" padding="8px">
-        <mj-image padding="0" border="none" width="480px" src="https://i.ibb.co/5hb83Xgm/cv-Book042025-1.jpg" alt="Couverture du nouveau CV Book avec de nouveaux étudiants"/>
+        <mj-image padding="0" border="none" width="210px" src="./images/cvbook022025.png" alt="Couverture du nouveau CV Book avec de nouveaux étudiants"/>
       </mj-column>
       <mj-column width="60%" padding="8px">
         <mj-spacer height="12px"></mj-spacer>
