ajout des images pour le mobile

--- a/src/includes/_opcoAtlas.pug
+++ b/src/includes/_opcoAtlas.pug
@@ -12,17 +12,18 @@ mj-section(background-color='#ffffff' padding="20px 17px")
             padding="0px"
             border="none"
             css-class="mobile-hide"
-            src="./images/afAtlas032025.png"
+            src="https://i.ibb.co/nssfmL4W/af-Atlas032025.png"
             alt="Rencontre - l'alternance : un passeport pour une formation dans le supérieur le 6 mars de 9h à 12h30 "
             width="210px")/
         //-Version Mobile
         mj-image(
             padding="0px"
             border="none"
+            fluid-on-mobile="true"
             css-class="mobile-show"
-            src="https://i.ibb.co/3mbWWJ4n/EsaIogo.jpg"
-            alt="Version mobile, logo de l'ESA(École Supérieure d'Assurance) avec un groupe d'étudiants"
-            width="480px")/
+            src="./images/atlasOPCO022025.png"
+            alt="Rencontre - l'alternance : un passeport pour une formation dans le supérieur le 6 mars de 9h à 12h"
+            width="430px")/
     
     mj-column(width='60%' padding="8px")
         mj-spacer(height="12px")
